--- a/product/存储与CDN/对象存储 4.0/购买指南/计费方式/资源包（预付费）/资源包退费.md
+++ b/product/存储与CDN/对象存储 4.0/购买指南/计费方式/资源包（预付费）/资源包退费.md
@@ -14,14 +14,14 @@
 >- 如需退还参与活动购买的资源包，且退款规则与活动规则有冲突，则以活动规则为准。
 >- 如出现疑似异常或恶意退费，腾讯云有权拒绝您的退费申请。
 
-#### 常见问题
+### 常见问题
 
-1. 如何查看资源包的订单类型？
-您可在**费用 > 费用中心 > 订单管理 > 预付费订单**中查看订单类型，在产品类别中选择“COS 对象存储”即可。[前往查看](https://console.cloud.tencent.com/expense/deal)
+#### 1. 如何查看资源包的订单类型？
+您可在**费用 > 费用中心 > 订单管理 > 预付费订单**中查看订单类型，在产品类别中选择“COS 对象存储”即可。[点此前往查看](https://console.cloud.tencent.com/expense/deal)。
 ![](https://qcloudimg.tencent-cloud.cn/raw/98a525fc395036c8d675f7229c00b066.png)
 
-2. 如何查看资源包的用量及有效期？
-您可在**COS 控制台 > 资源包管理 > 自购资源包**中查看资源包的用量及有效期。[前往查看](https://console.cloud.tencent.com/cos/package/buy)
+#### 2. 如何查看资源包的用量及有效期？
+您可在**COS 控制台 > 资源包管理 > 自购资源包**中查看资源包的用量及有效期。[点此前往查看](https://console.cloud.tencent.com/cos/package/buy)
 ![](https://qcloudimg.tencent-cloud.cn/raw/b6167ff9e808d7847dfd8f1c66995fa1.png)
 
 
@@ -71,9 +71,9 @@
 
 1. 登录 [腾讯云控制台](https://console.cloud.tencent.com)。
 2. 在控制台页面的右上方单击**费用 > 费用中心 > 续费管理**，在产品类别中选择“COS 对象存储”。在续费类型中选择“手动续费项”或者“自动续费项”进行筛选，找到您想要退费的资源包。在续费列表的操作列中单击**更多 > 退订续费**，如下图所示：
+![](https://qcloudimg.tencent-cloud.cn/raw/16060cec9f84b2c669e27d41bad658ed.png)
   - 若您的资源包符合退费规则，即可自助退费。
   - 若不符合要求，则无法退费。
-![](https://qcloudimg.tencent-cloud.cn/raw/16060cec9f84b2c669e27d41bad658ed.png)
 >!用量统计数据非实时数据（有24小时延迟），如果您当天购买资源包，需要在次日才能看到当天的用量。
 >
 3. 在退款信息页面，请仔细核对退款信息（包括资源包信息、退款形式、退款金额等）。
