修改单词错误
Signed-off-by: cuishuang <imcusg@gmail.com>

--- a/api/安全服务/BGP 高防 IP/防护信息类接口/1.DDoS 攻击计数.md
+++ b/api/安全服务/BGP 高防 IP/防护信息类接口/1.DDoS 攻击计数.md
@@ -20,4 +20,4 @@
 | attacks | 1035/次 |	Integer | DDoS 攻击次数 |
 | attackPeak | 35000/Mbps | Integer |	DDoS 攻击峰值 |
 | overload |	6/次 |	Integer |	弹性防护开启次数 |
-| bandwitdh |	80000/Mbps |	Integer |	该 BGP 高防 IP 的防护带宽 |
+| bandwidth |	80000/Mbps |	Integer |	该 BGP 高防 IP 的防护带宽 |
