--- a/api/视频服务/直播/APP-SDK下载/更新历史.md
+++ b/api/视频服务/直播/APP-SDK下载/更新历史.md
@@ -70,7 +70,7 @@
 （8）解决推流端切换到后台或者断开网络推流失败后，播放端一直在自动重连的 bug。
 
 ### Version 1.5.1
-（1）Andriod 推流支持硬件加速（白名单列表持续追加中）；
+（1）Android 推流支持硬件加速（白名单列表持续追加中）；
 （2）MP4 和 HLS 点播支持硬件解码；
 （3）解决与互动直播的库冲突；
 （4）点播增加重连机制。
