--- a/product/企业协同/腾讯会议/操作指南/移动端/共享屏幕.md
+++ b/product/企业协同/腾讯会议/操作指南/移动端/共享屏幕.md
@@ -1,6 +1,6 @@
 >?
 - iOS 客户端： iOS 12.0（除13.0）以上的系统版本支持屏幕共享功能。iOS 13.0.x由于存在系统 Bug 暂不支持屏幕共享功能。
-- Andriod 客户端：Andriod 5.0及以上版本支持屏幕共享功能。
+- Android 客户端：Android 5.0及以上版本支持屏幕共享功能。
 
 
 腾讯会议支持移动端和桌面客户端发起共享屏幕，当您单击【共享屏幕】后，便可快速发起共享，在同一时间内，只支持单个人共享屏幕。
@@ -24,7 +24,7 @@
 
 
 ## 共享白板
->!以下展示页面为 iOS 客户端页面，Andriod 客户端页面部分按钮文案与 iOS 客户端不同，但操作步骤一致。
+>!以下展示页面为 iOS 客户端页面，Android 客户端页面部分按钮文案与 iOS 客户端不同，但操作步骤一致。
 
 1. 单击界面下方工具栏的【共享屏幕】启动屏幕共享。
 2. 共享发起者选择【共享白板】，与会人员即可观看。
