--- a/product/安全服务/游戏应用安全/购买指南/计费概述/质量监控.md
+++ b/product/安全服务/游戏应用安全/购买指南/计费概述/质量监控.md
@@ -312,7 +312,7 @@
 <tbody>
 <tr>
 <td rowspan=10 >PerfSight</td>
-<td rowspan=10 >Andriod、iOS、Swtich 等移动端和主机平台</td>
+<td rowspan=10 >Android、iOS、Swtich 等移动端和主机平台</td>
 <td rowspan=10 >预付费</td>
 <td>5万 MAU 资源包</td>
 <td>3万元</td>
@@ -374,7 +374,7 @@
 <tbody>
 <tr>
 <td rowspan=10 >CrashSight</td>
-<td rowspan=10 >Andriod、iOS、Swtich 等移动端和主机平台</td>
+<td rowspan=10 >Android、iOS、Swtich 等移动端和主机平台</td>
 <td rowspan=10 >预付费</td>
 <td>5万 MAU 资源包</td>
 <td>3万元</td>
