--- a/product/安全管理/业务风险情报系统/API 文档/号码标签接口.md
+++ b/product/安全管理/业务风险情报系统/API 文档/号码标签接口.md
@@ -49,7 +49,7 @@ query_info 是一个 json 结构，定义如下：
 | ip                 | 是   | String | IP。                                                |
 | os_type            | 是   | Int    | 操作系统类型：<li>0：未知。</li><li>1：Android。</li><li>2：iOS。</li><li>3：Windows。</li> |
 | os_ver             | 否   | String | 操作系统版本号，建议提供。                          |
-| imei               | 是   | String | Andriod 设备的 IMEI。                                 |
+| imei               | 是   | String | Android 设备的 IMEI。                                 |
 | imsi               | 否   | String | imsi。                                              |
 | mac                | 否   | String | 设备的 MAC 地址。                                     |
 | access_mode        | 否   | String | 入网方式，可取值有：wifi、4g、3g、2g。                          |
