--- a/product/视频服务/点播/0-存档旧文档（含弃用文档）/已废弃文档/开发指南/使用播放器播放视频.md
+++ b/product/视频服务/点播/0-存档旧文档（含弃用文档）/已废弃文档/开发指南/使用播放器播放视频.md
@@ -1,4 +1,4 @@
-云点播提供了移动端（Andriod 和 iOS）及 Web 端播放器 SDK，即点播超级播放器。
+云点播提供了移动端（Android 和 iOS）及 Web 端播放器 SDK，即点播超级播放器。
 
 超级播放器可以让不同平台的客户端快速集成云点播视频的播放功能，是我们推荐您使用的播放方式。同时，云点播的视频也支持您使用第三方播放器播放。
 
