--- a/product/视频服务/点播/0-存档旧文档（含弃用文档）/已废弃文档/开发指南/如何对内容做版权保护.md
+++ b/product/视频服务/点播/0-存档旧文档（含弃用文档）/已废弃文档/开发指南/如何对内容做版权保护.md
@@ -52,7 +52,7 @@
 
 | DRM 类型 | 适用文件格式 | 适用播放环境 |
 | -- | -- | -- |
-| Widevine | Dash | Andriod 播放器、Chrome 和 Firefox 浏览器 |
+| Widevine | Dash | Android 播放器、Chrome 和 Firefox 浏览器 |
 | FairPlay | HLS | iOS 播放器以及 Safari 浏览器 |
 
 ## 云点播 DRM 方案
