--- a/product/视频服务/点播/0-存档旧文档（含弃用文档）/开发指南/视频加密/接入指引.md
+++ b/product/视频服务/点播/0-存档旧文档（含弃用文档）/开发指南/视频加密/接入指引.md
@@ -39,7 +39,7 @@
 * TCPlayer 中的 fileID 填 [步骤1](#p1) 上传视频的 ID。
 * TCPlayer 中的 psign 填 [步骤3](#p2) 生成的超级播放器签名。
 
-#### Andriod 播放器
+#### Android 播放器
 下载 [超级播放器 Android](https://cloud.tencent.com/document/product/266/7938) SDK 并在终端安装。播放视频时：
 * model.videoId.fileId 填 [步骤1](#p1) 上传视频的 ID。
 * model.videoId.pSign 填 [步骤3](#p2) 生成的超级播放器签名。
