--- a/product/视频服务/短视频/产品动态.md
+++ b/product/视频服务/短视频/产品动态.md
@@ -80,7 +80,7 @@
 <td>Version 9.0</td>
 <td ><ul style="margin:0;">
 <li>Android：优化短视频合唱加载耗时问题。</li>
-<li>Andriod：修复在视频裁剪过程中偶现的裁剪不准确问题。</li>
+<li>Android：修复在视频裁剪过程中偶现的裁剪不准确问题。</li>
 <li>Android：优化短视频SDK的性能问题。</li>
 <li>Android：优化短视频的稳定性问题。</li>
 <li>Android：修复短视频上传压缩过程中切换后来出现的压缩异常问题。</li>
