--- a/product/视频服务/移动直播/SDK下载与集成/版本历史.md
+++ b/product/视频服务/移动直播/SDK下载与集成/版本历史.md
@@ -630,7 +630,7 @@ iOS&Android：直播播放器优化延迟控制算法，避免频繁加减速。
 - 解决推流端切换到后台或者断开网络推流失败后，播放端一直在自动重连的 bug。
 
 ### Version 1.5.1
-- Andriod 推流支持硬件加速（白名单列表持续追加中）。
+- Android 推流支持硬件加速（白名单列表持续追加中）。
 - MP4 和 HLS 点播支持硬件解码。
 - 解决与互动直播的库冲突。
 - 点播增加重连机制。
