--- a/product/安全管理/业务风险情报系统/API 文档/设备标签接口.md
+++ b/product/安全管理/业务风险情报系统/API 文档/设备标签接口.md
@@ -45,7 +45,7 @@ query_info 是一个 json 结构，定义如下：
 | ip                     | 是   | String | IP。                                                |
 | os_type                | 是   | Int    | 操作系统类型：<li>0：未知。</li><li>1：Android。</li><li>2：iOS。</li><li>3：Windows。</li> |
 | os_ver                 | 否   | String | 操作系统版本号，建议提供。                          |
-| imei                   | 否   | String | Andriod 设备的 IMEI。                                 |
+| imei                   | 否   | String | Android 设备的 IMEI。                                 |
 | mac                    | 否   | String | MAC 地址，建议提供。                                 |
 | phone_num              | 否   | String | 电话号码。                                          |
 | user_agent             | 否   | String | 用户端类型。                                        |
