--- a/product/物联网/物联网智能视频服务/用户手册/功能组件.md
+++ b/product/物联网/物联网智能视频服务/用户手册/功能组件.md
@@ -1,7 +1,7 @@
 
 
 ### SDK
-物联网智能视频服务（消费版）提供设备及应用端 SDK 开发包，设备 SDK 支持 Linux 操作系统，可移植到不同的芯片硬件平台。应用端 SDK 包括 iOS App 开发 SDK、Andriod App 开发 SDK，以及 PC 端 SDK 开发包。
+物联网智能视频服务（消费版）提供设备及应用端 SDK 开发包，设备 SDK 支持 Linux 操作系统，可移植到不同的芯片硬件平台。应用端 SDK 包括 iOS App 开发 SDK、Android App 开发 SDK，以及 PC 端 SDK 开发包。
 
 进入腾讯云官网，填写 [申请表](https://cloud.tencent.com/apply/p/ozpml9a5po) 进行试用申请，完成申请后，相关工作人员将联系您进行需求沟通并提供对应 SDK 及 Demo。
 
