--- a/product/视频服务/点播/0-存档旧文档（含弃用文档）/开发指南/视频播放/使用基础播放器播放/接入指引.md
+++ b/product/视频服务/点播/0-存档旧文档（含弃用文档）/开发指南/视频播放/使用基础播放器播放/接入指引.md
@@ -13,7 +13,7 @@
 在网页中引入 [基础播放器 Web](https://cloud.tencent.com/document/product/881/20207#.E5.AF.B9.E6.8E.A5.E6.94.BB.E7.95.A5) SDK。
 播放视频时，TCPlayer 中指定 [步骤1](#p1) 上传视频的 URL。
 
-#### Andriod 播放器
+#### Android 播放器
 下载 [基础播放器 Android](https://cloud.tencent.com/document/product/881/20205) SDK 并在终端安装。
 播放视频时，model.url 填 [步骤1](#p1) 上传视频的 URL。
 
