--- a/product/视频服务/短视频/SDK 下载/版本历史.md
+++ b/product/视频服务/短视频/SDK 下载/版本历史.md
@@ -29,7 +29,7 @@
 - Android：优化短视频合唱加载耗时问题。
 - Android：优化短视频 SDK 的性能问题。
 - Android：优化短视频的稳定性问题。
-- Andriod：修复在视频裁剪过程中偶现的裁剪不准确问题。
+- Android：修复在视频裁剪过程中偶现的裁剪不准确问题。
 - iOS：修复短视频上传压缩过程中切换后来出现的压缩异常问题。
 
 ### Version 8.9 @ 2021.07.15
