--- a/product/视频服务/视立方·音视频终端引擎/6_5-控制台指南/连麦管理/02-快速上手.md
+++ b/product/视频服务/视立方·音视频终端引擎/6_5-控制台指南/连麦管理/02-快速上手.md
@@ -19,7 +19,7 @@
 
 
 1. 新版连麦功能需要使用您的 License 资源，选择已解锁直播推流 License 的应用，处于有效期内的正式/测试应用均可。
-2. 选择应用后，查看对应的 License Url 和 License Key，并按照下方提示在 Demo 源码中进行参数替换。可单击切换查看 iOS 和 Andriod 环境操作说明。
+2. 选择应用后，查看对应的 License Url 和 License Key，并按照下方提示在 Demo 源码中进行参数替换。可单击切换查看 iOS 和 Android 环境操作说明。
 3. 完成 Demo 源码替换后，单击 **下一步**。
 ![image](https://qcloudimg.tencent-cloud.cn/raw/d5c4070e7907672070df1fca3e940624.png)
 
@@ -34,12 +34,12 @@
 <dx-tabs>
 ::: 新建应用
 1. 单击 **新建应用**，填写应用名称，单击 **确定**。
-2. 查看应用的 SDKAppID 和密钥并按照下方提示在 Demo 源码中进行参数替换。可单击切换查看 IOS 和 Andriod 环境操作说明。
+2. 查看应用的 SDKAppID 和密钥并按照下方提示在 Demo 源码中进行参数替换。可单击切换查看 IOS 和 Android 环境操作说明。
 ![image](https://qcloudimg.tencent-cloud.cn/raw/173c204795c38f6157fcb0b78bca97c8.png)
 :::
 ::: 关联 TRTC 应用
 1. 单击 **关联 TRTC 应用**，下拉选择 TRTC 应用，单击**确定**。
-2. 查看应用的 SDKAppID 和密钥并按照下方提示在 Demo 源码中进行参数替换。可单击切换查看 IOS 和 Andriod 环境操作说明。
+2. 查看应用的 SDKAppID 和密钥并按照下方提示在 Demo 源码中进行参数替换。可单击切换查看 IOS 和 Android 环境操作说明。
 ![image](https://qcloudimg.tencent-cloud.cn/raw/b8324a7546926445234bb34b7248f69e.png)
 :::
 </dx-tabs>
