--- a/product/解决方案/微信云支付/开发文档/HTTPS API 说明（新）/交易接口/公众号支付.md
+++ b/product/解决方案/微信云支付/开发文档/HTTPS API 说明（新）/交易接口/公众号支付.md
@@ -188,7 +188,7 @@ authen_info	|是|	AuthenInfo	|认证信息，详见接口调用说明。
 		<td class="tg-s268">-</td>
     <td class="tg-s268">否</td>
     <td class="tg-s268">Number(32)	</td>
-		<td class="tg-s268">终端类型，1：Windows，2：Andriod，3：iOS，4：Linux，100：其他。</td>
+		<td class="tg-s268">终端类型，1：Windows，2：Android，3：iOS，4：Linux，100：其他。</td>
   </tr>
 	<tr>
     <td class="tg-s268">sdk_version</td>
