--- a/product/安全服务/网站管家/操作指南/概览.md
+++ b/product/安全服务/网站管家/操作指南/概览.md
@@ -48,5 +48,5 @@
 ![](https://qcloudimg.tencent-cloud.cn/raw/b57e73358239c76a71f824dd4370cac9.png)
 - 业务运营：分析描述了当前选择的域名在统计周期内的 QPS 及带宽详情，右侧统计了该域名统计周期内的的响应及访问次数的 Top 值。
 ![](https://qcloudimg.tencent-cloud.cn/raw/fa8348999b728bbf18dac830e339b784.png)
-- Bot 与业务安全：描述了当前域名在统计周期内的 Bot 信息，单击前往 [BOT流量分析](https://console.cloud.tencent.com/guanjia/tea-flowanalysis) 即可查看 BOT与 业务安全的流量信息。
-![](https://qcloudimg.tencent-cloud.cn/raw/f2d70da1ca6a9f5e85224d44907e63fa.png)
+- BOT 与业务安全：描述了当前域名在统计周期内的 BOT 信息，单击前往 [BOT流量分析](https://console.cloud.tencent.com/guanjia/tea-flowanalysis) 即可查看 BOT 与业务安全的流量信息。
+![](https://qcloudimg.tencent-cloud.cn/raw/0b0960b826e863102a79da73749f449e.png)
