--- a/product/互联网中间件/腾讯分布式服务框架/快速入门/02 在容器环境中部署微服务/00 快速创建一个容器集群.md
+++ b/product/互联网中间件/腾讯分布式服务框架/快速入门/02 在容器环境中部署微服务/00 快速创建一个容器集群.md
@@ -23,7 +23,7 @@
    - 容器网络：为集群内容器分配在容器网络地址范围内的 IP 地址，这里我们选择可用的容器网络。
    - 标签：可选，用于分类管理资源。详情参见 [标签](https://cloud.tencent.com/document/product/649/53869)。
    - 备注：可选，集群的描述，不超过200个字符。
-   - 数据集：可选，将新建的集群添加到已有数据集中。数据集使用，请参见 [数据集管理](https://cloud.tencent.com/document/product/649/38326)。
+   - 数据集：可选，**用于细粒度管理子账号数据权限**。将新建的集群添加到已有数据集中。数据集使用，请参见 [数据集管理](https://cloud.tencent.com/document/product/649/38326)。
 4. 单击**提交**，在弹窗中选择**确认**，进入导入云主机页面。如果选择**取消**，您后续可以在集群列表中，单击集群操作列的**导入云主机**重新导入云主机。
 
 
