--- a/product/互联网中间件/腾讯分布式服务框架/快速入门/03 在虚拟机环境中部署微服务/00 快速创建一个虚拟机集群.md
+++ b/product/互联网中间件/腾讯分布式服务框架/快速入门/03 在虚拟机环境中部署微服务/00 快速创建一个虚拟机集群.md
@@ -19,9 +19,9 @@
    - 集群名：填写集群名称，最长60个字符。
    - 所在可用区：选择集群所在的可用区
    - 集群网络：选择与已购买云服务器相同的 VPC 网络，用来保证后续导入集群的云服务器属于同一 VPC。
-   - 标签：用于分类管理资源，详情参见 [标签](https://cloud.tencent.com/document/product/649/53869)。此处不填写。
-   - 备注：集群的描述，不超过200个字符。
-   - 数据集：将新建的集群添加到已有数据集中，详情参见 [数据集管理](https://cloud.tencent.com/document/product/649/38326)。此处不填写。
+   - 标签：可选，用于分类管理资源，详情参见 [标签](https://cloud.tencent.com/document/product/649/53869)。此处不填写。
+   - 备注：可选，集群的描述，不超过200个字符。
+   - 数据集：可选，**用于细粒度管理子账号数据权限**。将新建的集群添加到已有数据集中，详情参见 [数据集管理](https://cloud.tencent.com/document/product/649/38326)。此处不填写。
 4. 单击**提交**，在弹窗中选择**确认**，进入导入云主机页面。如果选择**取消**，您后续可以在集群列表中，单击操作列的**导入云主机**重新导入云主机。
 
 
