--- a/product/互联网中间件/腾讯分布式服务框架/快速入门/03 在虚拟机环境中部署微服务/00 快速创建一个虚拟机集群.md
+++ b/product/互联网中间件/腾讯分布式服务框架/快速入门/03 在虚拟机环境中部署微服务/00 快速创建一个虚拟机集群.md
@@ -61,9 +61,9 @@
 
 通过本文，您已经了解如何在腾讯微服务平台中创建虚拟机集群，在已创建的虚拟机集群和命名空间中，您可以创建并部署应用，常见的应用类型有：
 
-- [部署 Spring Cloud TSF 应用](https://cloud.tencent.com/document/product/649/55494)
-- [部署 Spring Cloud 原生应用](https://cloud.tencent.com/document/product/649/55495)
-- [部署 Service Mesh 应用](https://cloud.tencent.com/document/product/649/55496)
-- [部署 Dubbo 应用](https://cloud.tencent.com/document/product/649/55497)
+- [部署 Spring Cloud TSF 应用](https://cloud.tencent.com/document/product/649/55494)：Spring Cloud 普通应用使用 TSF SDK 接入，支持 TSF 全栈服务治理、应用性能监控、应用配置管理能力。
+- [部署 Spring Cloud 原生应用](https://cloud.tencent.com/document/product/649/55495)：原生 Spring Cloud 应用0代码改造即可接入，支持服务发现、服务治理、应用性能监控能力。
+- [部署 Service Mesh 应用](https://cloud.tencent.com/document/product/649/55496)：Mesh 应用支持 Go/Python/C++ 等不同编程语言，通过 Service Mesh 技术接入 TSF，无需修改代码，支持全套 TSF 服务治理能力。
+- [部署 Dubbo 应用](https://cloud.tencent.com/document/product/649/55497)：Dubbo 应用使用 TSF Atom-SDK 框架接入，支持 TSF 全栈服务治理、应用配置管理能力。
 
 
