--- a/product/安全服务/网站管家/操作指南/概览.md
+++ b/product/安全服务/网站管家/操作指南/概览.md
@@ -1,4 +1,4 @@
-概览页面可浏览当前账户下 waf 实例信息，攻击概览，安全分析等模块。
+概览页面可浏览当前账户下 WAF 实例信息，攻击概览，安全分析等模块。
 
 ## 安全概览
 1. 登录 [Web 应用防火墙控制台](https://console.cloud.tencent.com/guanjia/tea-overview)，在左侧导航栏中，选择**概览**，进入概览页面。
@@ -10,7 +10,7 @@
  ![](https://qcloudimg.tencent-cloud.cn/raw/43ea1457f33fb2f14702a3df152af1eb.png)
 
 ## 规则更新动态
-在概览页面的规则更新动态模块，单击右上角的**查看更多**，即可查看当前 waf 支持的 Web 规则库。
+在概览页面的规则更新动态模块，单击右上角的**查看更多**，即可查看当前 WAF 支持的 Web 规则库。
 ![](https://qcloudimg.tencent-cloud.cn/raw/37374f11b2a3d53f1b80d81c7ecf3bfb.png)
 
 
