--- a/product/存储与CDN/安全加速/购买指南/套餐升配说明.md
+++ b/product/存储与CDN/安全加速/购买指南/套餐升配说明.md
@@ -16,10 +16,11 @@
 
 > ? 安全加速 SCDN 入门版不支持 **Web 防护**、**BOT 防护**能力。若需购买，请先勾选**增强流量清洗**，后勾选 **Web 防护**、**BOT 防护**。
 
-## 升级须知
-
-1. **升级前后套餐到期时间不变**，升级金额也会按统一到期日进行金额折算。
-2. 套餐升级成功后，当月会补发一定的用量，可前往**服务概览**页右侧安全加速 SCDN 套餐详情中查看。
+## 升配须知
+1. **升配补缴费用公式**
+	补交费用 = 当前套餐费 \* 已使用天数 / 月固定天数30天 + 新套餐费用 \* 套餐剩余天数 / 月固定天数30天 - 已交当前套餐费用
+2. **升配不改变当前套餐到期时间**，升配需要补缴费用，金额为当前套餐到期前的剩余有效时间段按比例折算的费用。
+3. 套餐升级成功后，当月会补发一定的用量，可前往**服务概览**页右侧安全加速 SCDN 套餐详情中查看。
    **示例：**您在2022-04-08 16:24:06 购买 SCDN 入门版套餐（1个月有效期），实际支付1,060元；于控制台在 2022-04-18 18:24:06 升级为 SCDN 增强版套餐（官网定价16,600元/月）。则：
    - 到期时间仍为原套餐（入门版）到期时间  **2022-05-08 16:24:06**；
    - 升级金额 = 1,060  \* 10/30 + 16,600 \* 20/30 - 1,060 = 10,359.65 元。
