--- a/product/安全服务/安全营销运营平台/操作指南/资源库存/企业总库存.md
+++ b/product/安全服务/安全营销运营平台/操作指南/资源库存/企业总库存.md
@@ -124,3 +124,6 @@
 </tbody></table>
 3. 填写完成后，单击**确认分配**创建商品，自动返回“产品子库存”分配列表页面。
 4. 已分配商品默认上线，商品上线才能进入“商品管理/活动管理”上线的列表中。
+>!商品在商城正式上线还需要在 [商品上下架页面](https://console.cloud.tencent.com/smop/mall/mall_exc_conf) 中添加商品后方可正式上线。
+
+
