--- a/product/大数据与AI/数据集成/产品简介/产品优势.md
+++ b/product/大数据与AI/数据集成/产品简介/产品优势.md
@@ -1,4 +1,4 @@
-﻿### 全场景覆盖
+### 全场景覆盖
 覆盖离线、实时的全场景同步，支持数据接入(E)、清洗与打宽(T)、数据加载(L)全流程。用户能够以业务特性为导向定义数据来源及去向，关联配置数据字段及类型映射关系，稳定保障不同数据类型结构转换一致性和可用性。
 
 ### 多源异构数据融合
