--- a/product/大数据与AI/数据集成/常见问题.md
+++ b/product/大数据与AI/数据集成/常见问题.md
@@ -1,4 +1,4 @@
-﻿### 数据集成支持哪些数据源？
+### 数据集成支持哪些数据源？
 数据集成（DataInLong）支持多种云上及自建数据源，如：
 关系型数据库：Mysql、PostgreSQL、Oracle、SQL Server、IBM DB2、达梦 DM、SAP HANA 等。
 大数据存储：Hive、HDFS、HBase、Kudu、Clickhouse、DLC、Impala、Gbase、Tbase 等。
