--- a/product/大数据与AI/万象优图2.0/控制台指南/存储桶管理/媒体处理/工作流.md
+++ b/product/大数据与AI/万象优图2.0/控制台指南/存储桶管理/媒体处理/工作流.md
@@ -2,7 +2,7 @@
 
 数据万象支持设置媒体工作流，您可以快速、灵活、按需搭建视频处理流程。每个工作流与输入存储桶的一个路径绑定，当视频文件**上传**至该路径时，该媒体工作流就会被**自动触发**，执行指定的处理操作，并将处理结果自动保存至目标存储桶的指定路径下。
 
-在数据工作流中可以实现**音视频转码（包括极速高清转码、广电专业格式转码）**、**视频截帧**、 **视频转动图**、**智能封面**、**音视频拼接**、**人声分离**、**精彩集锦**、**hls自适应多码率**、**SDRtoHDR** 、**视频增强**、**超分辨率**、**音视频分段**、**自定义函数**、**图片处理**等功能。
+在数据工作流中可以实现**音视频转码（包括极速高清转码、广电专业格式转码）**、**视频截帧**、 **视频转动图**、**智能封面**、**音视频拼接**、**人声分离**、**精彩集锦**、**自适应码流**、**SDRtoHDR** 、**视频增强**、**超分辨率**、**音视频分段**、**自定义函数**、**图片处理**等功能。
 
 
 >!
@@ -53,9 +53,9 @@
 ::: 精彩集锦
 ![](https://qcloudimg.tencent-cloud.cn/raw/f4fc4cdbd12418b9ea869ddb5bdd8013.png)
 :::
-::: hls自适应多码率
-![](https://qcloudimg.tencent-cloud.cn/raw/3157803ae06a4f5270b257169e2f4d7b.png)
-说明：将多码率、多音轨的多个文件打包生成一个文件，一步生成多码率自适应的视频文件。
+::: 自适应码流
+![](https://qcloudimg.tencent-cloud.cn/raw/f8f5c0b7a1b9f42e80f25f377c198812.png)
+说明：将多码率、多音轨的多个文件打包生成一个文件，一步生成HLS或DASH格式的多码率自适应的视频文件。
 :::
 ::: SDRtoHDR
 ![](https://qcloudimg.tencent-cloud.cn/raw/de20698b2fcbd264a866802a9cb235db.png)
