--- a/product/大数据与AI/数据集成/购买指南.md
+++ b/product/大数据与AI/数据集成/购买指南.md
@@ -3,7 +3,7 @@
 
 ## 购买方式
 数据集成资源组支持以下两种售卖方式：
-- 公有云服务：按年预付费，即开即用（即将上线，敬请期待）。您可以前往提交 [开通申请](https://cloud.tencent.com/apply/p/u4d608sy53i) 留下您的联系方式与业务需求，我们的客服人员会在3个工作日内与您联系。
+- 公有云服务：即将开放，敬请期待。目前暂不收费，您可以前往提交 [开通申请](https://cloud.tencent.com/apply/p/u4d608sy53i) 留下您的联系方式与业务需求，我们的客服人员会在3个工作日内与您联系。
 - 私有化部署：将数据集成独享地部署至您指定资源，支持按照您的需求定制化改造。您可以前往提交 [开通申请](https://cloud.tencent.com/apply/p/u4d608sy53i) 留下您的联系方式与业务需求，我们的客服人员会在3个工作日内与您联系
 
 
