--- a/product/数据库/云存储Redis/操作指南/网络与安全/配置外网地址.md
+++ b/product/数据库/云存储Redis/操作指南/网络与安全/配置外网地址.md
@@ -8,7 +8,7 @@
 ## 注意事项
 1. 启用后，您可以使用系统分配的域名和端口通过外网访问腾讯云数据库 Redis，生效时间大概需要5分钟。
 2. 外网访问仅用于开发或辅助管理数据库，业务访问请使用内网访问。
-3. 外网访问开通后将受到安全组网络访问策略的控制，请在安全组入站规则中配置访问数据库的来源信息，并放通协议端口。具体操作，请参见 [Redis 安全组配置](https://cloud.tencent.com/document/product/239/30911)。
+3. 外网访问开通后将受到安全组网络访问策略的控制，请在安全组入站规则中配置访问数据库的来源信息，并放通协议端口（需同时放开内外网端口，内网端口默认为6379）。具体操作，请参见 [Redis 安全组配置](https://cloud.tencent.com/document/product/239/30911)。
 4. 外网访问的出现故障，不会计入 Redis 服务的整体可用性计算。
 
 ## 前提条件
