--- a/product/互联网中间件/腾讯分布式服务框架/快速入门/02 在容器环境中部署微服务/00 快速创建一个容器集群.md
+++ b/product/互联网中间件/腾讯分布式服务框架/快速入门/02 在容器环境中部署微服务/00 快速创建一个容器集群.md
@@ -17,13 +17,13 @@
    ![](https://qcloudimg.tencent-cloud.cn/raw/a5cb4239b36da196fe5d17bc193a53f2.png)
    - 集群类型：选择**容器集群**。
    - 新建类型：选择**直接创建**。
-   - Kubernetes 版本：选择容器集群的 Kubernetes 版本。
-   - 所在可用区：选择容器集群所在的可用区。
+   - Kubernetes 版本：选择容器集群的 Kubernetes 版本，建议选择最新版本或者次新版本。
+   - 所在可用区：选择容器集群所在的可用区，建议选择**默认可用区**。
    - 集群网络：为集群内主机分配在主机网络地址范围内的 IP 地址，选择与已购买云服务器相同的 VPC 网络，用来保证后续导入集群的云服务器属于同一 VPC。
    - 容器网络：为集群内容器分配在容器网络地址范围内的 IP 地址，这里我们选择可用的容器网络。
-   - 标签：可选，用于分类管理资源。详情参见 [标签](https://cloud.tencent.com/document/product/649/53869)。
-   - 备注：可选，集群的描述，不超过200个字符。
-   - 数据集：可选，**用于细粒度管理子账号数据权限**。将新建的集群添加到已有数据集中。数据集使用，请参见 [数据集管理](https://cloud.tencent.com/document/product/649/38326)。
+   - 标签：可选，可留空。用于分类管理资源，详情参见 [标签](https://cloud.tencent.com/document/product/649/53869)。
+   - 备注：可选，可留空。集群的描述，不超过200个字符。
+   - 数据集：可选，可留空。用于细粒度管理子账号数据权限，详情参见 [数据集管理](https://cloud.tencent.com/document/product/649/38326)。
 4. 单击**提交**，在弹窗中选择**确认**，进入导入云主机页面。如果选择**取消**，您后续可以在集群列表中，单击集群操作列的**导入云主机**重新导入云主机。
 
 
@@ -34,14 +34,12 @@
 2. 单击**下一步**，进行云主机配置。
    - 导入方式：容器集群只支持**重装系统**部署方式，该方式会使 root 用户安装 agent。
    - 操作系统：目前只支持 Ubuntu。
-   - 登录方式：提供三种对应登录方式。
-     - 设置密码：请根据提示设置对应密码。
-     - 立即关联密钥：密钥对是通过一种算法生成的一对参数，是一种比常规密码更安全的登录云主机的方式。详请参阅 [SSH 密钥](https://cloud.tencent.com/document/product/213/6092)。
-     - 自动生成密码：自动生成的密码将通过站内信发送给您，也可登录CVM控制台重置密码。
-   - 数据卷挂载：勾选后，自动格式化数据盘成ext4，仅对拥有一块数据盘的节点生效。
+   - 登录方式：选择**设置密码**，并根据提示设置对应的的密码。
    - 容器目录：默认。设置容器和镜像存储目录，建议存储到数据盘。
-   - 安全组：选择 default，安全组具有防火墙的功能，用于设置云主机 CVM 的网络访问控制。详情参见 [安全组设置](id:安全组设置)。
+   - 安全组：选择 default，安全组具有防火墙的功能，用于设置云主机 CVM 的网络访问控制。
 3. 单击**提交**，等待云主机导入完成，云主机的可用状态将变为“可用”。
+4. 返回集群列表页面，集群状态变为**运行中**，可用云主机数量变为1。
+   ![](https://qcloudimg.tencent-cloud.cn/raw/f20675d8bef61c19d7228d11f3502dd6.png)
 
 
 
