--- a/product/互联网中间件/腾讯分布式服务框架/快速入门/02 在容器环境中部署微服务/00 快速创建一个容器集群.md
+++ b/product/互联网中间件/腾讯分布式服务框架/快速入门/02 在容器环境中部署微服务/00 快速创建一个容器集群.md
@@ -33,7 +33,7 @@
 1. 从集群所在 VPC 的云主机列表中，选择需要添加到集群的云主机。
 2. 单击**下一步**，进行云主机配置。
    - 导入方式：容器集群只支持**重装系统**部署方式，该方式会使 root 用户安装 agent。
-   - 操作系统：目前只支持 Ubuntu。
+   - 操作系统：支持 CentOS，TencentOS 和 Ubuntu 三种类型。
    - 登录方式：选择**设置密码**，并根据提示设置对应的的密码。
    - 容器目录：默认。设置容器和镜像存储目录，建议存储到数据盘。
    - 安全组：选择 default，安全组具有防火墙的功能，用于设置云主机 CVM 的网络访问控制。
