--- a/product/数据库/云存储Redis/操作指南/网络与安全/配置外网地址.md
+++ b/product/数据库/云存储Redis/操作指南/网络与安全/配置外网地址.md
@@ -19,7 +19,7 @@
 ## 开启外网地址
 1. 登录 [Redis 控制台](https://console.cloud.tencent.com/redis)，在实例列表，单击实例 ID，进入实例详情页。
 2. 在实例详情页右侧的**网络信息**模块中，单击**外网地址**处的**开启**。
->!外网访问开通后将受到安全组网络访问策略的控制，请在安全组入站规则中配置访问数据库的来源信息，并放通协议端口。具体操作，请参见 [Redis 安全组配置](https://cloud.tencent.com/document/product/239/30911)。
+>!外网访问开通后将受到安全组网络访问策略的控制，请在安全组入站规则中配置访问数据库的来源信息，并放通协议端口（需同时放开内网和外网端口，内网端口默认为6379）。具体操作，请参见 [Redis 安全组配置](https://cloud.tencent.com/document/product/239/30911)。
 >
 ![](https://qcloudimg.tencent-cloud.cn/raw/604393e23b84f9c595c0d9ba4e4b31b4.png)
 3. 在弹出的对话框，确认无误后，单击**确定**。
