--- a/product/企业应用/千帆鹊桥 iPaaS/使用指南/深度集成/Dataway 表达式/开发指南/场景案例.md
+++ b/product/企业应用/千帆鹊桥 iPaaS/使用指南/深度集成/Dataway 表达式/开发指南/场景案例.md
@@ -1,7 +1,7 @@
-本节将通过几个典型的场景案例说明 Dataway 在千帆鹊桥 iPaaS 系统中应用。
+本节将通过几个典型的场景案例说明 Dataway 在腾讯云数据连接器平台中应用。
 
 ## 案例一：使用 Dataway 获取 token
-千帆鹊桥 iPaaS 中封装企业微信连接器，可以完成成员管理、消息推送等多种操作，每次操作本质上都是调用 [企业微信 API](https://work.weixin.qq.com/api/doc/90000/90135/90664) 完成的。在调用 API 前，需要获取 access_token。相当于创建一个登录凭证，其他的业务接口都依赖 access_token 鉴权调用者身份。
+腾讯云数据连接器中封装企业微信连接器，可以完成成员管理、消息推送等多种操作，每次操作本质上都是调用 [企业微信 API](https://work.weixin.qq.com/api/doc/90000/90135/90664) 完成的。在调用 API 前，需要获取 access_token。相当于创建一个登录凭证，其他的业务接口都依赖 access_token 鉴权调用者身份。
 
 本示例将模拟该调用过程，并说明 Dataway 脚本在其中起到的作用。
 ![gettoken-flow流程图](https://main.qcloudimg.com/raw/55c5694386793fe6ca2638b6264df40e/%E8%8E%B7%E5%8F%96token-flow%E5%9B%BE.png)
