--- a/product/互联网中间件/腾讯分布式服务框架/快速入门/03 在虚拟机环境中部署微服务/00 快速创建一个虚拟机集群.md
+++ b/product/互联网中间件/腾讯分布式服务框架/快速入门/03 在虚拟机环境中部署微服务/00 快速创建一个虚拟机集群.md
@@ -17,11 +17,11 @@
    ![](https://qcloudimg.tencent-cloud.cn/raw/cc20cb08b1c28bb367691f11c58416dc.png)
    - 集群类型：选择**虚拟机集群**。
    - 集群名：填写集群名称，最长60个字符。
-   - 所在可用区：选择集群所在的可用区
+   - 所在可用区：选择集群所在的可用区，建议选择**默认可用区**。
    - 集群网络：选择与已购买云服务器相同的 VPC 网络，用来保证后续导入集群的云服务器属于同一 VPC。
-   - 标签：可选，用于分类管理资源，详情参见 [标签](https://cloud.tencent.com/document/product/649/53869)。此处不填写。
-   - 备注：可选，集群的描述，不超过200个字符。
-   - 数据集：可选，**用于细粒度管理子账号数据权限**。将新建的集群添加到已有数据集中，详情参见 [数据集管理](https://cloud.tencent.com/document/product/649/38326)。此处不填写。
+   - 标签：可选，可留空。用于分类管理资源，详情参见 [标签](https://cloud.tencent.com/document/product/649/53869)。此处不填写。
+   - 备注：可选，可留空。集群的描述，不超过200个字符。
+   - 数据集：可选，可留空。用于细粒度管理子账号数据权限，详情参见 [数据集管理](https://cloud.tencent.com/document/product/649/38326)。
 4. 单击**提交**，在弹窗中选择**确认**，进入导入云主机页面。如果选择**取消**，您后续可以在集群列表中，单击操作列的**导入云主机**重新导入云主机。
 
 
@@ -34,13 +34,11 @@
    ![](https://qcloudimg.tencent-cloud.cn/raw/24d343583180d25b280928054da51b39.png)
    - 导入方式：选择**重装系统**。
    - 操作系统：支持两种不同操作系统选择，Ubuntu 18.04版本与 CentOS 7.5版本。
-   - 登录方式：提供三种对应登录方式。
-      - 设置密码：请根据提示设置对应密码。
-      - 立即关联密钥：密钥对是通过一种算法生成的一对参数，是一种比常规密码更安全的登录云主机的方式。详请参阅 [SSH 密钥](https://cloud.tencent.com/document/product/213/6092)。
-      - 自动生成密码：自动生成的密码将通过站内信发送给您，也可登录 CVM 控制台重置密码。
+   - 登录方式：选择**设置密码**，并根据提示设置对应密码。
 3. 单击**提交**，导入的云主机将出现在云主机名列表中。等待几分钟，刷新列表，正常情况下云主机的状态将变为运行中，可用状态变为"可用"。
 ![](https://qcloudimg.tencent-cloud.cn/raw/40ed786022bad89f6ca3006379212dbc.png)
-
+4. 返回集群列表页面，集群状态变为**运行中**，可用云主机数量变为1。
+   ![](https://qcloudimg.tencent-cloud.cn/raw/f9060b6720b6457b103a98d83b18e4f8.png)
       
 
 ## 集群关联的系统命名空间
