--- a/product/企业应用/千帆鹊桥 iPaaS/使用指南/深度集成/应用配置.md
+++ b/product/企业应用/千帆鹊桥 iPaaS/使用指南/深度集成/应用配置.md
@@ -107,7 +107,7 @@
 ![](https://document-1259649581.cos.ap-guangzhou.myqcloud.com/eis/44.png) 
 
 ## 多人协作开发模式
-千帆 iPaaS 提供**多人协作**开发特性，让用户团队内多名成员可以同时开发同一个应用，提升开发效率。且通过设置编辑时加锁机制，解决了多人同时编辑带来的版本不一致问题。
+腾讯云数据连接器提供**多人协作**开发特性，让用户团队内多名成员可以同时开发同一个应用，提升开发效率。且通过设置编辑时加锁机制，解决了多人同时编辑带来的版本不一致问题。
 >!多人开发是指支持单个应用下多个用户同时开发多条集成流。单条集成流在同一时间只支持被一位成员编辑，其余成员点击此集成流会处于锁定状态（不可编辑）。避免多人同时编辑带来的版本不一致问题。
 >
 ![](https://qcloudimg.tencent-cloud.cn/raw/fa33535453f64fd2d29c350363b6e1ff.png)
