--- a/product/企业应用/千帆鹊桥 iPaaS/使用指南/管理中心/审计日志.md
+++ b/product/企业应用/千帆鹊桥 iPaaS/使用指南/管理中心/审计日志.md
@@ -12,7 +12,7 @@
 ![](https://qcloudimg.tencent-cloud.cn/raw/62c8f8ce39ca9d6c658de74a696e3347.jpg)
 
 
-1. 登录 [千帆鹊桥 iPaaS 控制台](https://console.cloud.tencent.com/ipaas)，在左侧导航栏中选择**管理中心**>**审计日志**。
+1. 登录 [腾讯云数据连接器控制台](https://console.cloud.tencent.com/ipaas)，在左侧导航栏中选择**管理中心**>**审计日志**。
 2. 设置日志筛选项。筛选项包括：
    - 操作时间：支持按操作时间进行搜索，预定义近5分钟、近15分钟、近1小时、近6小时、近1天、近3天、近7天、近30天、今天、昨天、前天、本周、上周，以及自定义时间区间的设置。
    - 用户名称：支持按用户名称以及账号ID进行搜索，可用于查看指定用户的审计日志。
