--- a/product/企业应用/千帆鹊桥 iPaaS/使用指南/管理中心/审计日志.md
+++ b/product/企业应用/千帆鹊桥 iPaaS/使用指南/管理中心/审计日志.md
@@ -55,7 +55,7 @@
 
 ### 步骤3：下载日志  
 平台提供下载日志的功能。支持将当前列表的审计日志导出为.xlsx或.csv文件，以便后续进一步分析或整理。详细字段可参考 日志列表。
-登录 [千帆鹊桥 iPaaS 控制台](https://console.cloud.tencent.com/ipaas)，在左侧导航栏中选择**审计日志**，单击**下载日志**按钮后选择导出为.xlsx或.csv文件即可。
+登录 [腾讯云数据连接器控制台](https://console.cloud.tencent.com/ipaas)，在左侧导航栏中选择**审计日志**，单击**下载日志**按钮后选择导出为.xlsx或.csv文件即可。
 ![](https://qcloudimg.tencent-cloud.cn/raw/ca322fa7f9cab55bea2369b4bcf25285.png)
 
 
