--- a/product/企业应用/千帆鹊桥 iPaaS/使用指南/管理中心/环境管理.md
+++ b/product/企业应用/千帆鹊桥 iPaaS/使用指南/管理中心/环境管理.md
@@ -3,7 +3,7 @@
 
 ## 操作步骤
 ### 环境列表
-1. 登录 [千帆鹊桥 iPaaS 控制台](https://console.cloud.tencent.com/ipaas)，在左侧导航栏单击**管理中心** > **环境管理**。
+1. 登录 [腾讯云数据连接器控制台](https://console.cloud.tencent.com/ipaas)，在左侧导航栏单击**管理中心** > **环境管理**。
 2. 环境列表页面展示环境名称、状态、区域、环境类型、资源、应用数量以及操作。如下图所示：
 ![](https://qcloudimg.tencent-cloud.cn/raw/c078149e7af93129a6532e18b7cb0d81.png)
  - **环境名称**：通过列表展示当前用户有权限的所有集群的名称。 
@@ -54,7 +54,7 @@
 
 
 ### 概况
-1. 登录 [千帆鹊桥 iPaaS 控制台](https://console.cloud.tencent.com/ipaas)，在左侧导航栏单击**管理中心** > **环境管理**。
+1. 登录 [腾讯云数据连接器控制台](https://console.cloud.tencent.com/ipaas)，在左侧导航栏单击**管理中心** > **环境管理**。
 2. 单击集群名称，进入集群详情页。
 2. 在集群详情页的**概况**页签，对发布环境、名称、状态、集群类型、运行中集成应用数等相关信息做了集中展示，如下图：
 ![](https://qcloudimg.tencent-cloud.cn/raw/49add4734d70a243896a79ec55cd1ae0.png)
@@ -63,7 +63,7 @@
 
 
 ### 应用管理
-1. 登录 [千帆鹊桥 iPaaS 控制台](https://console.cloud.tencent.com/ipaas)，在左侧导航栏单击**管理中心** > **环境管理**。
+1. 登录 [腾讯云数据连接器控制台](https://console.cloud.tencent.com/ipaas)，在左侧导航栏单击**管理中心** > **环境管理**。
 2. 单击集群名称，进入集群详情页。
 3. 在集群详情页的**应用管理**页签，您可以查看应用名称、项目名称、部署时间、运行/调试版本。
 ![](https://qcloudimg.tencent-cloud.cn/raw/b3b83938822cf28dba1e06abe01c6d0c.png)
