--- a/product/企业应用/千帆鹊桥 iPaaS/使用指南/管理中心/环境管理.md
+++ b/product/企业应用/千帆鹊桥 iPaaS/使用指南/管理中心/环境管理.md
@@ -46,8 +46,8 @@
 </tbody></table>
  - **区域**：展示自建及共享集群的集群列表。
  - **环境类型**：当前平台支持两种不同的集群类型，不同的集群类型描述了集群的部署特点和资源能力。
-	- 共享集群：所有用户共享的高可用的千帆鹊桥 iPaaS 的运行环境，可用于快速发布应用。
-	- 独立集群：基于数据和资源的安全性考虑，千帆鹊桥 iPaaS 也提供资源和数据隔离性更强的部署模式，即独立集群。用户可以独占千帆鹊桥 iPaaS 的运行环境，达到计算资源和数据的隔离，能够以较低成本，快速提升隔离级别。目前暂不开放独立集群的创建，需要使用该服务可以联系千帆鹊桥 iPaaS 管理团队进行申请。
+	- 共享集群：所有用户共享的高可用的腾讯云数据连接器的运行环境，可用于快速发布应用。
+	- 独立集群：基于数据和资源的安全性考虑，腾讯云数据连接器也提供资源和数据隔离性更强的部署模式，即独立集群。用户可以独占腾讯云数据连接器的运行环境，达到计算资源和数据的隔离，能够以较低成本，快速提升隔离级别。目前暂不开放独立集群的创建，需要使用该服务可以联系腾讯云数据连接器管理团队进行申请。
  - **资源**：展示环境的实际资源情况，共享环境不展示。
  - **应用数量**：展示此集群内所有运行状态的应用总数，方便用户清楚地了解应用的运行状态。
  - **操作**：目前暂时只支持应用管理和运行概览，后续将支持更多操作。
