--- a/product/企业应用/千帆鹊桥 iPaaS/使用指南/集成工具/安全网关.md
+++ b/product/企业应用/千帆鹊桥 iPaaS/使用指南/集成工具/安全网关.md
@@ -1,6 +1,6 @@
 ## 简介
 
-安全网关是为实现腾讯云数据连接器与用户内网服务集成互通而创新设计的代理系统，主要应用场景为用户内网服务不提供公网访问，而又希望通过千帆鹊桥 iPaaS （公有云部署）来完成与内网服务的集成。
+安全网关是为实现腾讯云数据连接器与用户内网服务集成互通而创新设计的代理系统，主要应用场景为用户内网服务不提供公网访问，而又希望通过腾讯云数据连接器（公有云部署）来完成与内网服务的集成。
 
 安全网关由 Server 和 Agent 构成：
 - Server 部署在腾讯云数据连接器系统内网，用户无需关注。
