--- a/product/企业应用/千帆鹊桥 iPaaS/使用指南/访问管理示例.md
+++ b/product/企业应用/千帆鹊桥 iPaaS/使用指南/访问管理示例.md
@@ -36,11 +36,8 @@
 <td><center>腾讯云数据连接器全读写访问权限</td>
 </tr>
 <tr>
-<td><center>设置普通用户的项目权限为只读</td>
+<td><center>设置普通用户的单个应用权限为只读/编辑/编辑并发布</td>
 <td rowspan=2><center><a href="https://cloud.tencent.com/document/product/598/37739">自定义策略</a> </td>
-</tr>
-<tr>
-<td><center>设置普通用户的项目权限为读写</td>
 </tr>
 </tbody></table>
 
