--- a/product/企业应用/千帆鹊桥 iPaaS/使用指南/访问管理示例.md
+++ b/product/企业应用/千帆鹊桥 iPaaS/使用指南/访问管理示例.md
@@ -96,25 +96,25 @@
 
 
 ## 权限管理授权
-授权用户拥有千帆鹊桥 iPaaS 项目管理的操作权限。项目用于千帆鹊桥 iPaaS 用户区分业务场景和权限划分，用户可以以项目维度管理集成应用。项目支持查看详情、修改名称和删除操作。
+授权用户拥有腾讯云数据连接器项目管理的操作权限。项目用于腾讯云数据连接器用户区分业务场景和权限划分，用户可以以项目维度管理集成应用。项目支持查看详情、修改名称和删除操作。
 
 **项目管理权限**
 
 | **角色**       | **权限**                                                         |
 | ---------- | ------------------------------------------------------------ |
-| 系统管理员 | 拥有千帆鹊桥 iPaaS 的最高使用权限，腾讯云主账号自动拥有系统管理员权限且无法撤销。系统管理员可授予、撤销任意成员系统管理员和项目管理员权限，可授予项目成员中任意普通用户对该集成项目中的某些集成应用的只读或读写权限。 |
-| 项目管理员 | 拥有子用户千帆鹊桥 iPaaS 相关权限和集成项目的最高权限，项目管理员可以对该集成项目下所有普通用户授予某些集成应用的只读或读写权限，可以授予或撤销项目管理员权限。 |
-| 普通成员   | 拥有子用户千帆鹊桥 iPaaS 相关权限和默认项目权限，腾讯云主账号下的所有子账号自动为千帆鹊桥 iPaaS 平台的普通成员。 |
+| 系统管理员 | 拥有腾讯云数据连接器的最高使用权限，腾讯云主账号自动拥有系统管理员权限且无法撤销。系统管理员可授予、撤销任意成员系统管理员和项目管理员权限，可授予项目成员中任意普通用户对该集成项目中的某些集成应用的只读或读写权限。 |
+| 项目管理员 | 拥有子用户腾讯云数据连接器相关权限和集成项目的最高权限，项目管理员可以对该集成项目下所有普通用户授予某些集成应用的只读或读写权限，可以授予或撤销项目管理员权限。 |
+| 普通成员   | 拥有子用户腾讯云数据连接器相关权限和默认项目权限，腾讯云主账号下的所有子账号自动为腾讯云数据连接器平台的普通成员。 |
 
 
 ### 设置/解除系统管理员
-系统管理员，可以对其他子账户操作设置/解除系统管理员。该腾讯云主账户默认为系统管理员且不可撤销。登录 [千帆鹊桥 iPaaS 控制台](https://console.cloud.tencent.com/ipaas)，选择**成员管理 > 设置为/解除系统管理员**。
+系统管理员，可以对其他子账户操作设置/解除系统管理员。该腾讯云主账户默认为系统管理员且不可撤销。登录 [腾讯云数据连接器控制台](https://console.cloud.tencent.com/ipaas)，选择**成员管理 > 设置为/解除系统管理员**。
 ![](https://document-1259649581.cos.ap-guangzhou.myqcloud.com/eis/106.png) 
 
 ### 设置/解除项目管理员
-系统管理员和项目管理员可以对其他子账户操作设置/解除项目管理员。登录 [千帆鹊桥 iPaaS 控制台](https://console.cloud.tencent.com/ipaas)，选择**集成项目 > 项目成员管理**，可自行配置项目成员相关权限。
+系统管理员和项目管理员可以对其他子账户操作设置/解除项目管理员。登录 [腾讯云数据连接器控制台](https://console.cloud.tencent.com/ipaas)，选择**集成项目 > 项目成员管理**，可自行配置项目成员相关权限。
 ![](https://document-1259649581.cos.ap-guangzhou.myqcloud.com/eis/107.png) 
 
 ### 授权用户特定操作权限
-如果您希望授权用户特定千帆鹊桥 iPaaS 应用的操作权限，可使用千帆鹊桥 iPaaS 内部的项目管理功能。系统管理员和项目管理员可以对其他子账户操作修改项目内其他应用的只读或读写权限。登录 [千帆鹊桥 iPaaS 控制台](https://console.cloud.tencent.com/ipaas)，选择**集成项目 > 项目成员管理 > 修改权限**，可针对一个项目下具有多个应用的项目，自行配置项目成员对应某个应用的读写或只读权限权限。
-![](https://document-1259649581.cos.ap-guangzhou.myqcloud.com/eis/108.png) 
+如果您希望授权用户特定腾讯云数据连接器应用的操作权限，可使用腾讯云数据连接器内部的项目管理功能。系统管理员和项目管理员可以对其他子账户操作修改项目内其他应用的只读或读写权限。登录 [腾讯云数据连接器控制台](https://console.cloud.tencent.com/ipaas)，选择**集成项目 > 项目成员管理 > 修改权限**，可针对一个项目下具有多个应用的项目，自行配置项目成员对应某个应用的读写或只读权限权限。
+![](https://qcloudimg.tencent-cloud.cn/raw/792ec2fe91ec168d15fc3c87344fb2da.png)
