--- a/product/企业应用/千帆鹊桥 iPaaS/使用指南/访问管理示例.md
+++ b/product/企业应用/千帆鹊桥 iPaaS/使用指南/访问管理示例.md
@@ -116,5 +116,5 @@
 ![](https://document-1259649581.cos.ap-guangzhou.myqcloud.com/eis/107.png) 
 
 ### 授权用户特定操作权限
-如果您希望授权用户特定腾讯云数据连接器应用的操作权限，可使用腾讯云数据连接器内部的项目管理功能。系统管理员和项目管理员可以对其他子账户操作修改项目内其他应用的只读或读写权限。登录 [腾讯云数据连接器控制台](https://console.cloud.tencent.com/ipaas)，选择**集成项目 > 项目成员管理 > 修改权限**，可针对一个项目下具有多个应用的项目，自行配置项目成员对应某个应用的读写或只读权限权限。
+如果您希望授权用户特定腾讯云数据连接器应用的操作权限，可使用腾讯云数据连接器内部的项目管理功能。系统管理员和项目管理员可以对其他子账户操作修改项目内其他应用的只读或读写权限。登录 [腾讯云数据连接器控制台](https://console.cloud.tencent.com/ipaas)，选择**项目管理**，单击成员管理选择指定成员可修改该成员对应项目下单个应用的权限为只读/编辑/编辑并发布，合理控制不同成员对应不同应用的权限。
 ![](https://qcloudimg.tencent-cloud.cn/raw/792ec2fe91ec168d15fc3c87344fb2da.png)
