--- a/product/企业协同/腾讯会议/退费说明.md
+++ b/product/企业协同/腾讯会议/退费说明.md
@@ -15,7 +15,7 @@
  -  **总时长：**当前订单所购买服务的总天数（1年按照365天计算）。
 >?
 >- 抵扣或代金券不予以退还。
->- 退还金额将全部退还到腾讯云账号余额。
+>- 退还金额将退回到您腾讯云账号余额或原路退回到您进行支付的其他账户中。
 >- 未生效的订单，全额退费。
 
 
