--- a/product/大数据与AI/万象优图2.0/API 文档/媒体处理/媒体截图接口/获取媒体文件截图.md
+++ b/product/大数据与AI/万象优图2.0/API 文档/媒体处理/媒体截图接口/获取媒体文件截图.md
@@ -34,7 +34,7 @@ Content-Length: <length>
 
 ```
 
-#### 2、通过直接输入地址+截图参数方式
+#### 2、通过URL地址添加参数方式
 
 ```shell
 https://<BucketName-APPID>.cos.<Region>.myqcloud.com/for-test.mp4?ci-process=snapshot&time=1&format=jpg&<Auth String>
