--- a/product/域名与网站/开源应用中心/购买指南/购买指南.md
+++ b/product/域名与网站/开源应用中心/购买指南/购买指南.md
@@ -155,7 +155,7 @@
  前往 [文件存储控制台](https://console.cloud.tencent.com/cfs/fs?rid=4)，进入 “文件系统” 管理页面，选择您开通应用实例时创建的实例，并查看**使用量/总用量**。如下图所示：
 ![](https://qcloudimg.tencent-cloud.cn/raw/b78e0f0837ac0f533df582861826084c.png)
  - 云数据库（CynosDB for MySQL）使用情况。
- 前往 [云数据库控制台](https://console.cloud.tencent.com/cynosdb)，进入 “TDSQL-C - 集群列表” 管理页面，选择您开通应用实例时创建的实例，并单击【集群ID/集群名】，即可查看该集群详情。如下图所示：
+ 前往 [云数据库控制台](https://console.cloud.tencent.com/cynosdb)，进入 “TDSQL-C - 集群列表” 管理页面，选择您开通应用实例时创建的实例，并单击**集群ID/集群名，**即可查看该集群详情。如下图所示：
 ![](https://main.qcloudimg.com/raw/b0046b3908dc4318cd7a9f178aac7070.png)
 
 
