--- a/product/大数据与AI/万象优图2.0/API 文档/媒体处理/媒体截图接口/获取媒体文件截图.md
+++ b/product/大数据与AI/万象优图2.0/API 文档/媒体处理/媒体截图接口/获取媒体文件截图.md
@@ -19,7 +19,7 @@ GetSnapshot 接口用于获取媒体文件某个时间的截图。
 
 ## 使用说明
 
-此接口为同步模式，异步模式请参考[任务接口-截图任务](https://cloud.tencent.com/document/product/436/53996)
+此接口为同步模式，异步模式请参考[任务接口-截图任务](https://cloud.tencent.com/document/product/436/53996)。
 
 ## 请求示例
 
@@ -81,7 +81,7 @@ https://<BucketName-APPID>.cos.<Region>.myqcloud.com/for-test.mp4?ci-process=sna
 
 ## 实际案例
 
-#### 请求1
+#### 请求1 通过GET请求方式
 
 ```shell
 GET /for-test.mp4?ci-process=snapshot&time=1.5 HTTP/1.1
@@ -91,7 +91,7 @@ Authorization: q-sign-algorithm=sha1&q-ak=AKIDWtTCBYjM5OwLB9CAwA1Qb2ThTSUjfG****
 Content-Length: 0
 ```
 
-#### 请求2
+#### 请求2 通过URL地址添加参数方式
 
 ```shell
 https://examplebucket-1250000000.cos.ap-beijing.myqcloud.com/for-test.mp4?ci-process=snapshot&time=1.5&q-sign-algorithm=sha1&q-ak=AKID********************************&q-sign-time=1650425932;1650433132&q-key-time=1650425932;1650433132&q-header-list=&q-url-param-list=&q-signature=********404b08ea7f7b8f803961bedd5
