--- a/product/互联网中间件/TDMQ CMQ 版/02 购买指南/价格总览.md
+++ b/product/互联网中间件/TDMQ CMQ 版/02 购买指南/价格总览.md
@@ -39,6 +39,7 @@ API 调用单价（单位：元/百万次调用）如下表所示：
 例如：一次 10KB 的消息请求（发布或订阅），将以**4次** API 调用次数计算费用。
 
 >? 如果是使用批量发送/消费，则会按照批量发送的消息条数分开计算。例如批量发送10条消息，每条2KB大小，则计算为10 × 2 = 20次 API 调用次数
+> 由于确认消息（删除消息）的请求体不包含消息内容，因此不会按消息大小进行倍率乘算
 
 
 [](id:msg)
@@ -88,8 +89,8 @@ API 调用单价（单位：元/百万次调用）如下表所示：
 | :---------------- | :------- | :------------- |
 | API调用           | 1000万次 | 分地域按月累计 |
 | 消息存储          | 10GB     | 分地域按月累计 |
-| 队列资源占用 | 50个     | 分地域 |
-| 主题资源占用 | 50个     | 分地域 |
+| 队列资源占用 | 50个     | 分地域|
+| 主题资源占用 | 50个     | 分地域|
 
 免费额度会优先抵扣每个主账号每个地域下各集群的累计用量，相同地域的不同队列/主题之间共享额度。
 
