--- a/product/大数据与AI/万象优图2.0/API 文档/媒体处理/媒体截图接口/获取媒体文件截图.md
+++ b/product/大数据与AI/万象优图2.0/API 文档/媒体处理/媒体截图接口/获取媒体文件截图.md
@@ -19,26 +19,22 @@ GetSnapshot 接口用于获取媒体文件某个时间的截图。
 
 ## 使用说明
 
-此接口为同步模式，异步模式请参考[任务接口-截图任务](https://cloud.tencent.com/document/product/436/53996)。
+此接口为同步模式，异步模式请参考 [任务接口-截图任务](https://cloud.tencent.com/document/product/436/53996)。
 
 ## 请求示例
 
-#### 1、通过GET请求方式
-
+#### 1. 通过GET请求方式
 ```shell
 GET /for-test.mp4?ci-process=snapshot&time=1&format=jpg HTTP/1.1
 Host: <BucketName-APPID>.cos.<Region>.myqcloud.com
 Date: <GMT Date>
 Authorization: <Auth String>
 Content-Length: <length>
-
 ```
 
-#### 2、通过URL地址添加参数方式
-
+#### 2. 通过URL地址添加参数方式
 ```shell
 https://<BucketName-APPID>.cos.<Region>.myqcloud.com/for-test.mp4?ci-process=snapshot&time=1&format=jpg&<Auth String>
-
 ```
 
 >?Auth String（详情请参见 [请求签名](https://cloud.tencent.com/document/product/436/7778) 文档）。
@@ -56,7 +52,7 @@ https://<BucketName-APPID>.cos.<Region>.myqcloud.com/for-test.mp4?ci-process=sna
 | ci-process | 操作类型，固定使用 snapshot | String |是|
 | time | 截图的时间点，单位为秒 | float |是|
 | width | 截图的宽。默认为0 | Int |否|
-| height | 截图的高。默认为0<br/>当 width 和 height 都为0时，表示使用视频的宽高；如果单个为0，则以另外一个值按视频宽高比例自动适应 | Int |否|
+| height | 截图的高。默认为0<br/>当 width 和 height 都为0时，表示使用视频的宽高。如果单个为0，则以另外一个值按视频宽高比例自动适应 | Int |否|
 | format | 截图的格式，支持 jpg 和 png，默认 jpg | String |否|
 | rotate | 图片旋转方式<br/><li>auto：按视频旋转信息进行自动旋转</li><li>off：不旋转</li>默认值为 auto | String |否|
 | mode | 截帧方式<br/><li>keyframe：截取指定时间点之前的最近的一个关键帧</li><li>exactframe：截取指定时间点的帧</li>默认值为 exactframe | String |否|
