--- a/product/区块链/至信链开放联盟链/常见问题/控制台账号相关.md
+++ b/product/区块链/至信链开放联盟链/常见问题/控制台账号相关.md
@@ -27,7 +27,8 @@
  
 ### 一个账号是否可以认证多家企业（企业为母公司和多家子公司）？
 1 个账号只能认证 1 个企业，1 个企业可以认证多个账号。
-企业注册时，系统会核验联系人信息吗？
+
+### 企业注册时，系统会核验联系人信息吗？
 会。请确保信息填写正确，且联系人姓名、手机号、身份证号码归属于同一人。
  
 ### 为什么手机收不到验证码？
