--- a/product/企业应用/千帆鹊桥 iPaaS/使用指南/集成资源/连接器.md
+++ b/product/企业应用/千帆鹊桥 iPaaS/使用指南/集成资源/连接器.md
@@ -5,7 +5,7 @@
 
 ## 操作步骤
 ### 查看连接器  
-登录 [腾讯云数据连接器腾讯云数据连接器控制台](https://console.cloud.tencent.com/ipaas)，选择**集成资源 > 连接器**，连接器可根据您的喜好选择卡片或列表形式展示，默认是卡片形式展示，单击一个连接器卡片，进入到该连接器的详情界面，可查看该连接器的简介、更新日志、连接器文档等信息。
+登录 [腾讯云数据连接器控制台](https://console.cloud.tencent.com/ipaas)，选择**集成资源 > 连接器**，连接器可根据您的喜好选择卡片或列表形式展示，默认是卡片形式展示，单击一个连接器卡片，进入到该连接器的详情界面，可查看该连接器的简介、更新日志、连接器文档等信息。
 ![](https://qcloudimg.tencent-cloud.cn/raw/0a9893823f878a21cd7a59e6fecc97ea.png)
 
 ### 编辑连接器  
