--- a/product/域名与网站/SSL 证书/私有证书/下载私有证书.md
+++ b/product/域名与网站/SSL 证书/私有证书/下载私有证书.md
@@ -1,26 +1,28 @@
-## 操作场景
-通过私有子 CA 签发私有证书后，您可以将私有证书下载到本地，并将证书安装至对应的证书主体。以下将指导您如何下载证书以及安装证书。
+## 下载私有证书
+通过私有CA签发私有证书后，您可以将私有证书下载到本地，然后分发给对应的证书主体进行安装使用。
 
-## 前提条件
-已通过私有子 CA 签发了私有证书。具体操作请参见 [申请私有证书](https://cloud.tencent.com/document/product/400/72334)。
+## 前提条件、
+- 已经通过私有CA申请并签发了私有证书。相关操作，请参见[申请私有证书]()。
 
 
 ## 操作步骤
-1. 登录 [SSL 证书私有 CA 控制台](https://console.cloud.tencent.com/private-ca)，进入私有 CA 列表。
-2. 在私有 CA 管理页面，选择需要吊销的私有 CA，单击操作列下拉按钮。
-3. 在展开的子 CA 列表中，单击**私有子 CA 名称**。
-![](https://qcloudimg.tencent-cloud.cn/raw/b95279d4d098ae86964ca628ff10f954.png)
-4. 在**证书列表**页签页面，选择需要吊销的证书，单击**更多 > 下载**。
-![](https://qcloudimg.tencent-cloud.cn/raw/d45b5a86a8517bb50d29f2b5464ed946.png)
-5. 将下载的证书分发给需要使用该私有证书的主体安装使用。服务端证书、客户端证书的安装方法不同，具体操作请参见 [私有证书安装说明](#state)。
+1. 登录腾讯云 [私有CA控制台](https://console.cloud.tencent.com/private-ca)，在私有CA页面，定位到要下载的私有CA，单击操作列下拉按钮。
+2. 在展开的子CA操作栏中，单击私有子**CA名称**。
+   ![](https://qcloudimg.tencent-cloud.cn/raw/b95279d4d098ae86964ca628ff10f954.png)
+
+3. 在证书列表页签页面，定位到要下载的证书，单击操作列下的**下载**。
+   ![](https://qcloudimg.tencent-cloud.cn/raw/2dc81dafb6fb8d61f74eb5e9643a07ad.png)
+
+4.将下载的文件分发给需要使用该私有证书的主体安装使用。服务端证书、客户端证书的安装方法不同，具体说明，请参见[私有证书安装说明]()。
 
 
-## 私有证书安装说明[](id:state)
-**服务端证书**：需要安装到应用服务器上。安装操作与安装通过SSL证书服务购买的公有SSl 证书相同。更多信息请参见 [如何选择 SSL 证书安装部署类型？](https://cloud.tencent.com/document/product/400/4143)
-**客户端证书**：需要安装到访问应用的客户端浏览器上。
+## 私有证书安装说明
+服务端证书：需要安装到应用服务器上。安装操作与安装通过SSL证书服务购买的公有SSl 证书相同。更多信息，请参见：[如何选择 SSL 证书安装部署类型？](https://cloud.tencent.com/document/product/400/4143)。
+客户端证书：需要安装到访问应用的客户端浏览器上。
 操作说明如下：
-安装证书链和证书：将下载到的压缩包解压后分发 `.crt` 文件给要安装客户端证书的用户，在客户端双击`.crt` 文件，即可将证书链和证书安装到客户端浏览器。
->!服务端证书均没有预设置到浏览器，需要客户端单独安装证书链后，才能规避不安全提示。
->
+1. 操作系统安装证书。
+>！服务端证书均没有预设置到浏览器，需要客户端单独安装证书链后，才能规避不安全提示。
 
-
+将下载到的压缩包解压后分发 `.crt` 文件给要安装客户端证书的用户，在客户端双击`.crt` 文件，即可将证书链和证书安装到客户端操作系统内。
+2. 浏览器安装证书
+>！如使用Firefox浏览器，还需把证书安装到Firefox浏览器内。
