--- a/product/企业应用/千帆鹊桥 iPaaS/快速入门/深度集成入门体验.md
+++ b/product/企业应用/千帆鹊桥 iPaaS/快速入门/深度集成入门体验.md
@@ -306,7 +306,7 @@ def dw_process(msg):
 </dx-codeblock>
 
 ## 发布
-千帆鹊桥 iPaaS 提供租户级别的多地域部署方式，在完成集成流的设计后，单击右上角**发布**，可以选择部署区域，确认后即可实现应用纬度的一键部署。
+腾讯云数据连接器提供租户级别的多地域部署方式，在完成集成流的设计后，单击右上角**发布**，可以选择部署区域，确认后即可实现应用纬度的一键部署。
 ![](https://qcloudimg.tencent-cloud.cn/raw/63c9bf8997bfd8b0ea010887d22e4341.png)
 
 ## 体验
@@ -323,4 +323,4 @@ def dw_process(msg):
 
 
 ## 实践总结
-在千帆鹊桥 iPaaS 中通过连接器和逻辑组件构建的集成流，轻松地在企业微信和企业邮箱之间进行数据打通。至此，您已经对千帆鹊桥 iPaaS 有了初步认识，后续您可以通过我们持续更新的教程进一步了解企千帆鹊桥 iPaaS 在不同应用场景下的功能和用法，帮助您更快更好地进行企业应用集成。
+腾讯云数据连接器中通过连接器和逻辑组件构建的集成流，轻松地在企业微信和企业邮箱之间进行数据打通。至此，您已经对腾讯云数据连接器有了初步认识，后续您可以通过我们持续更新的教程进一步了解企腾讯云数据连接器在不同应用场景下的功能和用法，帮助您更快更好地进行企业应用集成。
