--- a/product/存储与CDN/安全加速/购买指南/安全防护包计费说明.md
+++ b/product/存储与CDN/安全加速/购买指南/安全防护包计费说明.md
@@ -105,14 +105,34 @@
 
 ### 抵扣顺序
 
-![](https://qcloudimg.tencent-cloud.cn/raw/8d401dfe7afce6ad7ffba5864f68c504.jpg)
+![image-20220505165121675](https://tva1.sinaimg.cn/large/e6c9d24egy1h1xmmliajaj217c05waah.jpg)
 
 1. 套餐内赠送的安全防护量优先抵扣；
 2. 已使用的安全防护包优先抵扣；
-3. 不满足前两点的情况下，未使用包的抵扣优先级为：临近有效期包 > 金额更小包 > 购买自动续订抵扣包；
+3. 不满足前两点的情况下，未使用包的抵扣优先级为：临近有效期包 > 金额更小包 ；
 4. 若计费用量产生时，检测到您的账户下没有提前预购安全防护包，则会进入安全防护量后付费。
 
 > ? 若账户下某一时刻同时存在来源为“续订”和“自主购买”两种未使用的包，则抵扣优先级需判断未使用“自主购买”包和“续订”包的有效期。若未使用“自主购买包”有效期近，先抵扣“自主购买”包，再扣“续订”包；反之，先抵扣“续订”包，再抵扣“自主购买”包。
+
+**示例说明：** 
+
+<u>购买事件1</u>：2022年02月01日 13:15:00下单购买一个①  SCDN 入门版套餐（1个月有效），② 1TB 安全防护包（1个月有效）。
+
+<u>购买事件2</u>：2022年02月15日 10:15:00下单购买③ 500GB 安全防护包（1个月有效）、④ 100GB 安全防护包（12个月有效）。
+
+<u>购买事件3</u>：2022年02月25日 11:15:00下单购买 ⑤ 500GB 安全防护包（1个月有效，开启用尽续订）、 ⑥ 100GB 安全防护包（12个月有效）。
+
+<u>抵扣时间及顺序</u>：① - ② - ③ - ④ - ⑤ - ⑦ - ⑥
+
+![image-20220505171306992](https://tva1.sinaimg.cn/large/e6c9d24egy1h1xn94e7mrj21pw0dwmz2.jpg)
+
+2022年02月01日 13:15:00 - 2022年02月15日 10:15:00 产生安全防护流量消耗，优先抵扣① SCDN入门版套餐内发放的 2TB 安全防护量 ；若①使用完毕，则抵扣② 1TB 安全防护包（1个月有效）；
+
+2022年02月15日 10:15:00 - 2022年02月25日 11:15:00 继续产生安全防护流量消耗，若①②尚未使用完毕，则遵循抵扣顺序对未使用完毕的安全防护包进行抵扣；若①②使用完毕，则抵扣③ 500GB 安全防护包（1个月有效）；若①②③使用完毕，则抵扣④ 100GB 安全防护包（12个月有效）；
+
+2022年02月25日 11:15:00 后继续产生安全防护流量消耗，若①②③④尚未使用完毕，则遵循抵扣顺序对安全防护包进行抵扣；若①②③④已使用完毕，则抵扣⑤ 500GB 安全防护包（1个月有效）；若①②③④⑤使用完毕，则抵扣⑦ “续订”包-500GB 安全防护包（1个月有效）；直到⑥ 100GB 安全防护包（12个月有效）临近到期，有效期小于新的“续订”包，则抵扣⑥。
+
+> ? 若用户取消“用尽续订”，则后续产生的安全防护流量消耗计入安全防护量后付费。
 
 ### 抵扣时间
 
