--- a/product/安全服务/数据安全网关/操作指南（SaaS 型）/运维配置手册/运维任务/查看任务执行日志.md
+++ b/product/安全服务/数据安全网关/操作指南（SaaS 型）/运维配置手册/运维任务/查看任务执行日志.md
@@ -7,7 +7,7 @@
 - 管理员已授予运维人员访问主机的权限。
 - 运维人员已完成 [账号激活](https://cloud.tencent.com/document/product/1025/55183#step2)。
 - 堡垒机已升级到专业版。
-- 已执行过运维任务。
+- 已执行过 [运维任务](https://cloud.tencent.com/document/product/1025/73437)。
 
 ## 操作步骤
 1.	在浏览器中输入运维页面登录地址，打开堡垒机运维页面；输入手机号、密码登录堡垒机；也可以单击**账号密码**切换到账号名、密码方式登录。
