--- a/product/数据库/腾讯云图/用户手册/组件指南/地图/2D平面地图/弹出效果层.md
+++ b/product/数据库/腾讯云图/用户手册/组件指南/地图/2D平面地图/弹出效果层.md
@@ -21,12 +21,14 @@
 | **模糊半径** | 图标的模糊程度 | 2.07 |
 | **光晕颜色** | 图标标记周边的光晕颜色 | #52B7F1 |
 | **光晕高度** | 图标标记周边的光晕高度 | 67.31 |
+| **状态** | 开启后，根据数据中 status 属性判断图标的状态，赋予不同状态的图标不同颜色属性 | 不开启 |
 
 ## 动画参数配置
 | 参数 | 说明 | 默认值 |
 | --- | --- | --- |
 | **自动轮播** | 开启后，标签会反复渐变弹出到消失再渐变弹出的过程 | 不开启 |
 | **周期** | 标签渐变弹出到消失一个完整周期的时间 | 4.04 |
+
 
 ![](https://qcloudimg.tencent-cloud.cn/raw/8457109fbfefb27477fddd246813138d.png)
 
