--- a/product/数据库/腾讯云图/用户手册/组件指南/地图/2D平面地图/线热力效果层.md
+++ b/product/数据库/腾讯云图/用户手册/组件指南/地图/2D平面地图/线热力效果层.md
@@ -8,7 +8,7 @@
 | **最大宽度** | 热力值的最大值线宽度 | 4 |
 | **最大颜色** | 热力值的最大值颜色 | RGBA(255,255,255,0.46) |
 | **描边类型** | 热力线样式 | 实线 |
-| **填充颜色** |  | 不开启 |
+| **填充颜色** | 热力线底部区域颜色 | 不开启 |
 | **状态** | 开启后，根据数据中 status 属性判断热力线的状态，赋予不同状态的热力线不同颜色属性 | 不开启 |
 
 ## 动画参数配置
