--- a/product/数据库/腾讯云图/用户手册/组件指南/地图/2D平面地图/迁移效果层.md
+++ b/product/数据库/腾讯云图/用户手册/组件指南/地图/2D平面地图/迁移效果层.md
@@ -4,7 +4,7 @@
 | 参数 | 说明 | 默认值 |
 | --- | --- | --- |
 | **轮播动画** | 开启后，迁移飞线会有动态流光效果 | 开启 |
-| **间隔时间** |  | 0 |
+| **间隔时间** | 相邻迁移飞线启动流光的间隔时间，默认0是同时开始流光 | 0 |
 | **持续时间** | 单次流光运动的持续时间 | 2 |
 | **底线颜色** | 迁移飞线主体即非流光部分颜色 | RGBA(252,152,0,0.34) |
 | **底线宽度** | 迁移飞线主体宽度 |4 |
@@ -21,8 +21,8 @@
 | **半径** | 起终点图标半径 | 6 |
 | **开启动画** | 开启后，图标有气泡呼吸的动态效果 | 不开启 |
 | **持续时间** | 图标单次气泡呼吸时间 | 0 |
-| **描边宽度** |  | 0 |
-| **描边颜色** |  | RGBA(255,255,255,0) |
+| **描边宽度** | 图标边缘线宽度 | 0 |
+| **描边颜色** | 图标边缘线颜色 | RGBA(255,255,255,0) |
 | **开始颜色** | 图标渐变的开始颜色 | RGBA(255,90,50,0.7) |
 | **结束颜色** | 图标渐变的结束颜色 | #FFF |
 | **渐变** | 开启后，图标颜色会由内到外渐变 | 不开启 |
