--- a/product/企业通信/云呼叫中心/产品简介/功能列表/在线会话.md
+++ b/product/企业通信/云呼叫中心/产品简介/功能列表/在线会话.md
@@ -1,62 +1,3 @@
-<html xmlns:v="urn:schemas-microsoft-com:vml"
-xmlns:o="urn:schemas-microsoft-com:office:office"
-xmlns:x="urn:schemas-microsoft-com:office:excel"
-xmlns="http://www.w3.org/TR/REC-html40">
-
-<head>
-<meta http-equiv=Content-Type content="text/html; charset=gb2312">
-<meta name=ProgId content=Excel.Sheet>
-<meta name=Generator content="Microsoft Excel 15">
-<link id=Main-File rel=Main-File href="../腾讯云呼叫中心TCCC-功能列表-在线会话20220424.htm">
-<link rel=File-List href=filelist.xml>
-<link rel=Stylesheet href=stylesheet.css>
-<style>
-<!--table
-	{mso-displayed-decimal-separator:"\.";
-	mso-displayed-thousand-separator:"\,";}
-@page
-	{margin:.75in .7in .75in .7in;
-	mso-header-margin:.3in;
-	mso-footer-margin:.3in;}
-ruby
-	{ruby-align:left;}
-rt
-	{color:windowtext;
-	font-size:9.0pt;
-	font-weight:400;
-	font-style:normal;
-	text-decoration:none;
-	font-family:等线;
-	mso-generic-font-family:auto;
-	mso-font-charset:134;
-	mso-char-type:none;
-	display:none;}
--->
-</style>
-<![if !supportTabStrip]><script language="JavaScript">
-<!--
-function fnUpdateTabs()
- {
-  if (parent.window.g_iIEVer>=4) {
-   if (parent.document.readyState=="complete"
-    && parent.frames['frTabs'].document.readyState=="complete")
-   parent.fnSetActiveSheet(0);
-  else
-   window.setTimeout("fnUpdateTabs();",150);
- }
-}
-
-if (window.name!="frSheet")
- window.location.replace("../腾讯云呼叫中心TCCC-功能列表-在线会话20220424.htm");
-else
- fnUpdateTabs();
-//-->
-</script>
-<![endif]>
-</head>
-
-<body link="#0563C1" vlink="#954F72">
-
 <table border=0 cellpadding=0 cellspacing=0 width=899 style='border-collapse:
  collapse;table-layout:fixed;width:675pt'>
  <col class=xl65 width=101 style='mso-width-source:userset;mso-width-alt:3232;
@@ -67,9 +8,9 @@ else
  <col class=xl66 width=525 style='mso-width-source:userset;mso-width-alt:16800;
  width:394pt'>
  <tr height=33 style='mso-height-source:userset;height:24.95pt'>
-  <td colspan=2 height=33 width=214 style='height:24.95pt;width:161pt'>功能类别</td>
-  <td width=160 style='width:120pt'>功能点</td>
-  <td class=xl66 width=525 style='width:394pt'>功能描述</td>
+  <th colspan=2 height=33 width=214 style='height:24.95pt;width:161pt'>功能类别</td>
+  <th width=160 style='width:120pt'>功能点</td>
+  <th class=xl66 width=525 style='width:394pt'>功能描述</td>
  </tr>
  <tr height=20 style='mso-height-source:userset;height:15.0pt'>
   <td colspan=2 height=20 style='height:15.0pt'>集成方式</td>
@@ -86,7 +27,7 @@ else
  </tr>
  <tr height=38 style='height:28.5pt'>
   <td height=38 style='height:28.5pt'>参数传递</td>
-  <td class=xl66 width=525 style='width:394pt'>支持通过在URL后追加参数完成数据对接或自定义用户信息参数传递。</td>
+  <td class=xl66 width=525 style='width:394pt'>支持通过在 URL 后追加参数完成数据对接或自定义用户信息参数传递。</td>
  </tr>
  <tr height=19 style='height:14.25pt'>
   <td height=19 style='height:14.25pt'>企业名称展示</td>
@@ -153,7 +94,7 @@ else
  </tr>
  <tr height=38 style='height:28.5pt'>
   <td height=38 style='height:28.5pt'>参数传递</td>
-  <td class=xl66 width=525 style='width:394pt'>支持通过在URL后追加参数完成数据对接或自定义用户信息参数传递。</td>
+  <td class=xl66 width=525 style='width:394pt'>支持通过在 URL 后追加参数完成数据对接或自定义用户信息参数传递。</td>
  </tr>
  <tr height=19 style='height:14.25pt'>
   <td height=19 style='height:14.25pt'>企业名称展示</td>
@@ -602,16 +543,5 @@ else
   <td height=38 style='height:28.5pt'>获取坐席实时状态统计<span style='display:none'>指标</span></td>
   <td class=xl66 width=525 style='width:394pt'>用于通过接口获取坐席实时状态的统计指标，如：示闲、忙碌、当天在线总时长、当天忙碌总时长等。</td>
  </tr>
- <![if supportMisalignedColumns]>
- <tr height=0 style='display:none'>
-  <td width=101 style='width:76pt'></td>
-  <td width=113 style='width:85pt'></td>
-  <td width=160 style='width:120pt'></td>
-  <td width=525 style='width:394pt'></td>
- </tr>
- <![endif]>
 </table>
 
-</body>
-
-</html>
