--- a/product/企业通信/云呼叫中心/产品简介/功能列表/音视频通话.md
+++ b/product/企业通信/云呼叫中心/产品简介/功能列表/音视频通话.md
@@ -37,38 +37,32 @@
   <td>客服状态</td>
   <td>状态切换</td>
   <td class=xl66 width=447 style='width:335pt'>支持坐席切换示闲、示忙、小休、下线等状态。<br>
-    说明：示忙 — 示忙状态下坐席可以进行电话外呼但不会被分配新的来电。<br>
-    <span
-  style='mso-spacerun:yes'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  </span>忙碌 — 忙碌状态表示坐席正在接待电话呼入或进行电话外呼，此时不会被分配新的来电<br>
-    <span
-  style='mso-spacerun:yes'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  </span>小休 — 切换到小休状态坐席可以选择管理员在管理工作台配置的小休原因如“用餐”、“会议”、“培训”等。</td>
+    说明：<li>示忙 — 示忙状态下坐席可以进行电话外呼但不会被分配新的来电。</li><li>忙碌 — 忙碌状态表示坐席正在接待电话呼入或进行电话外呼，此时不会被分配新的来电。</li><li>小休 — 切换到小休状态坐席可以选择管理员在管理工作台配置的小休原因如“用餐”、“会议”、“培训”等。</td>
  </tr>
  <tr height=21 style='height:15.75pt'>
   <td rowspan=11 height=231 style='height:173.25pt'>VOIP-音频/视频呼入</td>
   <td>来电手动接听</td>
-  <td class=xl66 width=447 style='width:335pt'>支持来电坐席手动点击接听。</td>
+  <td class=xl66 width=447 style='width:335pt'>支持来电坐席手动单击接听。</td>
  </tr>
  <tr height=21 style='height:15.75pt'>
   <td height=21 style='height:15.75pt'>来电自动接听</td>
-  <td class=xl66 width=447 style='width:335pt'>支持来电后坐席无需点击接听，可自动接通。</td>
+  <td class=xl66 width=447 style='width:335pt'>支持来电后坐席无需单击接听，可自动接通。</td>
  </tr>
  <tr height=21 style='height:15.75pt'>
   <td height=21 style='height:15.75pt'>来电号码显示</td>
   <td class=xl66 width=447 style='width:335pt'>支持用户呼入时显示来电的用户的号码，若管理员开启号码保护功能，将不展示呼入用户的真实号码（主叫方）。注意该功能需要用户在小程序上授权。</td>
  </tr>
  <tr height=21 style='height:15.75pt'>
-  <td height=21 style='height:15.75pt'>IVR按键轨迹</td>
+  <td height=21 style='height:15.75pt'>IVR 按键轨迹</td>
   <td class=xl66 width=447 style='width:335pt'>支持在用户呼入时显示用户在 IVR 中的按键轨迹</td>
  </tr>
  <tr height=21 style='height:15.75pt'>
   <td height=21 style='height:15.75pt'>通话保持/取回</td>
-  <td class=xl66 width=447 style='width:335pt'>支持坐席与用户通话过程中点击“通话保持”使用户听到默认放音而听不到坐席说话的声音，点击“取回通话”可回到正常通话。</td>
+  <td class=xl66 width=447 style='width:335pt'>支持坐席与用户通话过程中单击“通话保持”使用户听到默认放音而听不到坐席说话的声音，单击“取回通话”可回到正常通话。</td>
  </tr>
  <tr height=21 style='height:15.75pt'>
   <td height=21 style='height:15.75pt'>静音/解除静音</td>
-  <td class=xl66 width=447 style='width:335pt'>支持坐席与用户通话过程中点击“静音”使用户听不到坐席说话的声音，点击“解除静音”可回到正常通话。</td>
+  <td class=xl66 width=447 style='width:335pt'>支持坐席与用户通话过程中单击“静音”使用户听不到坐席说话的声音，单击“解除静音”可回到正常通话。</td>
  </tr>
  <tr height=21 style='height:15.75pt'>
   <td height=21 style='height:15.75pt'>通话转接（指定技能组）</td>
@@ -121,7 +115,7 @@
  <tr height=21 style='height:15.75pt'>
   <td rowspan=6 height=126 style='height:94.5pt'>呼入设置</td>
   <td>呼入自动接听</td>
-  <td class=xl66 width=447 style='width:335pt'>开启后，呼入时自动接听，坐席无需手动点击“接听”按钮。</td>
+  <td class=xl66 width=447 style='width:335pt'>开启后，呼入时自动接听，坐席无需手动单击“接听”按钮。</td>
  </tr>
  <tr height=21 style='height:15.75pt'>
   <td height=21 style='height:15.75pt'>呼入超时转接</td>
@@ -252,7 +246,7 @@
   <td height=21 style='height:15.75pt'>音频管理</td>
   <td>音频管理</td>
   <td>音频管理</td>
-  <td class=xl66 width=447 style='width:335pt'>支持企业将话术录音上传，形成企业内部的语音库。在IVR或者其他可以配置语音话术的地方使用现有音频。</td>
+  <td class=xl66 width=447 style='width:335pt'>支持企业将话术录音上传，形成企业内部的语音库。在 IVR 或者其他可以配置语音话术的地方使用现有音频。</td>
  </tr>
  <tr height=21 style='height:15.75pt'>
   <td rowspan=2 height=42 style='height:31.5pt'>技能组管理</td>
