--- a/product/企业通信/云呼叫中心/产品简介/功能列表/音视频通话.md
+++ b/product/企业通信/云呼叫中心/产品简介/功能列表/音视频通话.md
@@ -78,7 +78,7 @@
  </tr>
  <tr height=21 style='height:15.75pt'>
   <td height=21 style='height:15.75pt'>三方通话</td>
-  <td class=xl66 width=447 style='width:335pt'>支持坐席&amp;用户&amp;外线第三方或坐席A&amp;坐席B&amp;用户之间三方通话。</td>
+  <td class=xl66 width=447 style='width:335pt'>支持坐席&amp;用户&amp;外线第三方或坐席 A &amp;坐席 B &amp;用户之间三方通话。</td>
  </tr>
  <tr height=21 style='height:15.75pt'>
   <td height=21 style='height:15.75pt'>加微任务</td>
@@ -106,7 +106,7 @@
  </tr>
  <tr height=63 style='height:47.25pt'>
   <td height=63 style='height:47.25pt'>收号设置</td>
-  <td class=xl66 width=447 style='width:335pt'>支持管理员新增、编辑、删除收号任务，收号功能具体包括：（1）通话中的收号放音支持使用系统参数（如：主叫/被叫号码等）或自定义参数；（2）支持按固定位数/最大位数收号；（3）支持输入系统回调地址后将收号信息传递至业务系统；（4）支持设置收号的超时时间，若用户未在指定时间内完成号码输入，则回到原通话。</td>
+  <td class=xl66 width=447 style='width:335pt'>支持管理员新增、编辑、删除收号任务，收号功能具体包括：<br>（1）通话中的收号放音支持使用系统参数（如：主叫/被叫号码等）或自定义参数；<br>（2）支持按固定位数/最大位数收号；<br>（3）支持输入系统回调地址后将收号信息传递至业务系统；<br>（4）支持设置收号的超时时间，若用户未在指定时间内完成号码输入，则回到原通话。</td>
  </tr>
  <tr height=21 style='height:15.75pt'>
   <td height=21 style='height:15.75pt'>通话保持放音设置</td>
@@ -115,7 +115,7 @@
  <tr height=21 style='height:15.75pt'>
   <td rowspan=6 height=126 style='height:94.5pt'>呼入设置</td>
   <td>呼入自动接听</td>
-  <td class=xl66 width=447 style='width:335pt'>开启后，呼入时自动接听，坐席无需手动单击“接听”按钮。</td>
+  <td class=xl66 width=447 style='width:335pt'>开启后，呼入时自动接听，坐席无需手动单击<b>接听。</b></td>
  </tr>
  <tr height=21 style='height:15.75pt'>
   <td height=21 style='height:15.75pt'>呼入超时转接</td>
