--- a/product/域名与网站/SSL 证书/私有证书/创建私有证书.md
+++ b/product/域名与网站/SSL 证书/私有证书/创建私有证书.md
@@ -1,4 +1,4 @@
-## 创建私有证书
+## 操作场景
 通过 [SSL 证书私有 CA 控制台](https://console.cloud.tencent.com/private-ca) 创建并启用私有 CA 和子 CA 后，您就可以通过私有子 CA 申请私有 SSL 证书，用于企业内部应用的身份认证和数据加解密。本文将指导您通过私有子 CA 申请私有 SSL 证书。
 
 ## 前提条件
