--- a/product/域名与网站/SSL 证书/私有证书/吊销私有证书.md
+++ b/product/域名与网站/SSL 证书/私有证书/吊销私有证书.md
@@ -1,4 +1,4 @@
-## 吊销私有证书
+## 操作场景
 私有证书过期前，如果您不再需要使用该证书，可通过 SSL 证书 [私有 CA 控制台](https://console.cloud.tencent.com/private-ca) 吊销私有证书。
 >!已吊销的私有证书将不再被企业内部环境所信任。
 >
