--- a/product/计算与网络/云硬盘/产品简介/地域和可用区.md
+++ b/product/计算与网络/云硬盘/产品简介/地域和可用区.md
@@ -131,7 +131,11 @@
 			<td>香港三区（中国香港节点可用于覆盖港澳台地区）<br>ap-hongkong-3</td>
 	</tr>
 </tbody>
-</table>	
+</table>
+
+<dx-alert infotype="explain" title="">
+济南、杭州、福州、武汉、长沙、石家庄地域目前处于内测中，如需使用，请提交 [内测申请](https://cloud.tencent.com/apply/p/6nzb3jwbsk) 进行开通。
+</dx-alert>
 
 [](id:InternationalArea)
 ## 其他国家和地区	
