--- a/product/安全服务/数据安全网关/操作指南（SaaS 型）/权限管理/新建访问权限.md
+++ b/product/安全服务/数据安全网关/操作指南（SaaS 型）/权限管理/新建访问权限.md
@@ -6,7 +6,7 @@
 ![](https://qcloudimg.tencent-cloud.cn/raw/b2f6673b0cad7c2f423a6b6e287179af.png)
 2. 在左侧导航选择**权限管理** > **访问权限配置**，进入访问权限页面。
 3. 在访问权限页面，单击**新建访问权限**，进入新建访问权限页面。
-4. 在新建访问权限页面，按照步骤分别配置权限名称、用户、主机、账号、访问操作、高危命令，实现用户与主机的授权，并对用户操作权限进行控制。
+4. 在新建访问权限页面，按照步骤分别配置权限名称、用户、资产、账号、访问操作、高危命令，实现用户与资产的授权，并对用户操作权限进行控制。
 ![](https://qcloudimg.tencent-cloud.cn/raw/9cdeca445386e7a6a9090678481217b0.png)
 5. 权限配置完成之后，单击**确定提交**，即可创建访问权限；此时，运维人员登录运维页面时，就能够看到可访问的主机。
 ![](https://qcloudimg.tencent-cloud.cn/raw/2cb3d7d70f8ab59b29119da5667c3cda.png)
