--- a/product/视频服务/视立方·音视频终端引擎/2-购买指南/价格总览.md
+++ b/product/视频服务/视立方·音视频终端引擎/2-购买指南/价格总览.md
@@ -23,17 +23,17 @@
 <td rowspan="3">腾讯云视立方 License 费用</td>
 <td>直播推流 License</td>
 <td>解锁直播推流（主播开播和主播观众连麦/主播跨房 PK）功能模块的授权。</td>
-<td><a href="https://cloud.tencent.com/document/product/1449/56972#licnese" target="_blank">购买资源包获赠</a></td>
+<td><a href="#license" target="_blank">购买资源包获赠</a></td>
 </tr>
 <tr>
 <td>短视频 License</td>
 <td>解锁短视频（视频录制编辑/视频上传发布）功能模块的授权。</td>
-<td><a href="https://cloud.tencent.com/document/product/1449/56972#licnese" target="_blank">购买资源包获赠</a></td>
+<td><a href="#license" target="_blank">购买资源包获赠</a></td>
 </tr>
 <tr>
 <td>腾讯特效 License</td>
 <td>解锁腾讯特效（美颜特效）功能模块的授权。</td>
-<td><a href="https://cloud.tencent.com/document/product/1449/56972#licnese" target="_blank">购买套餐包获取</a></td>
+<td><a href="#license" target="_blank">购买套餐包获取</a></td>
 </tr>
 <tr>
 <td rowspan="4">其他云产品服务费用</td>
@@ -58,7 +58,7 @@
 </tr>
 </tbody></table>
 
-[](id:licnese)
+[](id:license)
 ## 腾讯云视立方 License
 
 ### 基础服务费用
