--- a/product/视频服务/视立方·音视频终端引擎/2-购买指南/价格总览.md
+++ b/product/视频服务/视立方·音视频终端引擎/2-购买指南/价格总览.md
@@ -33,7 +33,7 @@
 <tr>
 <td>腾讯特效 License</td>
 <td>解锁腾讯特效（美颜特效）功能模块的授权。</td>
-<td><a href="#license" target="_blank">购买套餐包获取</a></td>
+<td><a href="#value" target="_blank">购买套餐包获取</a></td>
 </tr>
 <tr>
 <td rowspan="4">其他云产品服务费用</td>
@@ -124,7 +124,7 @@
 推荐您在使用音视频终端 SDK（腾讯云视立方）时，配合使用腾讯云直播、腾讯云点播服务，对应产生的播放日结流量消耗可被对应资源包按比例进行抵扣。
 
 ### 增值服务费用
-
+[](id:value)
 #### 腾讯特效 License 计费价格
 
 **腾讯特效 License 通过购买腾讯特效 SDK 套餐包获得授权，解锁腾讯特效（美颜特效）功能模块**。音视频终端引擎（腾讯云视立方）[全功能版 SDK](https://cloud.tencent.com/document/product/1449/56924)，支持腾讯特效（美颜特效）功能模块，但需**增值购买**腾讯特效 SDK 套餐包获得腾讯特效 License 授权，以解锁腾讯特效（美颜特效）功能模块。
