--- a/product/大数据与AI/数据湖计算/操作指南/数据表操作.md
+++ b/product/大数据与AI/数据湖计算/操作指南/数据表操作.md
@@ -9,6 +9,8 @@
 
 ### 途径二：在数据管理进行创建
 目前数据管理内仅支持管理托管存储于 DLC 的数据库表，外表请使用途径一进行创建。
+>? 数据湖计算 DLC 的数据管理页目前处于邀测阶段，如需免费体验可 [提交工单](https://console.cloud.tencent.com/workorder/category ) 进行申请。
+
 1. 登录[数据湖计算 DLC 控制台](https://console.cloud.tencent.com/dlc)，选择服务所在区域，登录用户需要有创建数据表的权限。
 2. 通过左侧菜单进入**数据管理**页面，单击数据表所在的数据库名称，进入数据库管理页面。
 ![](https://qcloudimg.tencent-cloud.cn/raw/8c6e8599b0a4a8ad450cc0b154105e00.png)
@@ -30,7 +32,7 @@
 	- 若选择了自动推断结构，DLC 会自动填充识别到的列、列名称、字段类型，若不正确请手动手动修改。
 ![](https://qcloudimg.tencent-cloud.cn/raw/6d683ff2c63a7e6fa5a3a9b12dbb46b0.png)
 
-- 通过对象存储COS创建数据表。
+- 通过对象存储 COS 创建数据表。
 	- 通过读取当前账户下的COS数据桶进行数据表创建。
 	- CSV：支持可视化配置解析 CSV 规则，包括压缩格式、列分割符号、字段域符。支持自动推断数据文件的 Schema 和将首行解析为列名。
 	- Json：DLC 仅将 Json 的第一层级识别为列，支持自动推断 Json 文件的 Shema，系统会将 Json 第一层字段识别为列名。
@@ -42,8 +44,8 @@
 - 数据分区通常为提高查询性能，会对大数据量的表进行分区。DLC 支持按照数据分区查询数据，用户需要在此步骤添加分区信息。通过分区您的数据，您可以限制每个查询扫描的数据量，从而提高查询性能并降低使用成本。DLC 遵从 Apache Hive 的分区规则。
 ![](https://qcloudimg.tencent-cloud.cn/raw/6ff6cd20c1a48d66c181748cc55a86c6.png)
 	- 分区列对应表的 COS 路径下的一个子目录，目录的命名规则为**分区列名=分区列值**。
+示例：
 ```
-例：
 	cosn://nanjin-bucket/CSV/year=2021/month=10/day=10/demo1.csv
 	cosn://nanjin-bucket/CSV/year=2021/month=10/day=11/demo2.csv    
 ```
@@ -95,7 +97,7 @@ LOCATION 'cosn://bucket_name/folder_name/';
 	- 导入数据要求及规则与创建数据库一致。
 4. 选择完成后，单击**确认**按钮进行数据导入。
 ![](https://qcloudimg.tencent-cloud.cn/raw/e116fa3c9822da07cec9aff51776d1a6.png)
-![](https://qcloudimg.tencent-cloud.cn/raw/aeb698f34ab7977ed557604fad259c44.png)
+![](https://qcloudimg.tencent-cloud.cn/raw/cf542b94e0ebb3c4c24c27537cffa1ed.png)
 ![](https://qcloudimg.tencent-cloud.cn/raw/cc1832cc0ee1237f640a147d21e2415b.png)
 
 ## 删除数据表
@@ -107,6 +109,8 @@ LOCATION 'cosn://bucket_name/folder_name/';
 
 ### 途径二：在数据管理进行删除
 目前数据管理内仅支持管理托管存储于DLC的数据库表，外表请使用途径一进行删除。
+>? 数据湖计算 DLC 的数据管理页目前处于邀测阶段，如需免费体验可 [提交工单](https://console.cloud.tencent.com/workorder/category)  进行申请。
+
 1. 登录[数据湖计算 DLC 控制台](https://console.cloud.tencent.com/dlc)，选择服务所在区域，登录用户需要有删除数据表的权限。
 2. 通过左侧菜单进入**数据管理**页面，单击数据库名称，进入数据库管理页面。
 3. 单击据表后的**删除**按钮，二次确认后可删除对应的数据表，同时清空数据表数据。
