--- a/product/大数据与AI/数据湖计算/操作指南/数据表操作.md
+++ b/product/大数据与AI/数据湖计算/操作指南/数据表操作.md
@@ -69,6 +69,8 @@ LOCATION 'cosn://bucket_name/folder_name/';
 ![](https://qcloudimg.tencent-cloud.cn/raw/ac2320a409dd76eaed5973858248ad56.png)
 ![](https://qcloudimg.tencent-cloud.cn/raw/b6cef126e687d260cb82b590fc0ea66d.png)
 ### 途径二：在数据管理进行查看
+>? 数据湖计算 DLC 的数据管理页目前处于邀测阶段，如需免费体验可 [提交工单](https://console.cloud.tencent.com/workorder/category) 进行申请。
+
 1. 登录[数据湖计算 DLC 控制台](https://console.cloud.tencent.com/dlc)，选择服务所在区域，登录用户需要有查看数据表的权限。
 2. 通过左侧菜单进入**数据管理**页面，单击数据表所在的数据库名称，进入数据库管理页面。
  - 支持查询数据表的基础信息，暂无数据表的数据路径、数据格式信息。
