--- a/product/大数据与AI/数据湖计算/操作指南/数据表操作.md
+++ b/product/大数据与AI/数据湖计算/操作指南/数据表操作.md
@@ -1,7 +1,7 @@
 用户可以使用数据湖计算 DLC 控制台或者 API，执行 DDL 语句创建数据库。
 
 ## 创建数据表
-### 途径一：在查询分析进行创建
+### 途径一：在数据探索进行创建
 1. 登录 [数据湖计算 DLC 控制台](https://console.cloud.tencent.com/dlc)，选择服务所在区域，登录用户需要有创建数据表的权限。
 2. 在数据库项目中，鼠标悬停表行，然后单击![img](https://main.qcloudimg.com/raw/b11192b7791016669333f5321cc6825e.png)图标，单击 **create table** 和 **create table as select ** 系统会自动在生成创建数据表的 SQL 模板，用户可以修改 SQL 模板创建数据表。
 3. DLC 自动生成创建数据表的 SQL 语句，执行创建数据表的 SQL 语句，完成创建。用户可以执行 SQL 语句查询表中数据。
@@ -64,7 +64,7 @@ LOCATION 'cosn://bucket_name/folder_name/';
 ```
 
 ## 查询数据表基本信息
-### 途径一：在查询分析中进行查询
+### 途径一：在数据探索中进行查询
 在数据表项目中，鼠标悬停**数据表名称**行，然后单击![img](https://main.qcloudimg.com/raw/b11192b7791016669333f5321cc6825e.png)图标，在下拉菜单中单击**基本信息**，可以查看创建的数据表基本信息。
 ![](https://qcloudimg.tencent-cloud.cn/raw/ac2320a409dd76eaed5973858248ad56.png)
 ![](https://qcloudimg.tencent-cloud.cn/raw/b6cef126e687d260cb82b590fc0ea66d.png)
@@ -103,7 +103,7 @@ LOCATION 'cosn://bucket_name/folder_name/';
 ![](https://qcloudimg.tencent-cloud.cn/raw/cc1832cc0ee1237f640a147d21e2415b.png)
 
 ## 删除数据表
-### 途径一：在查询分析进行删除
+### 途径一：在数据探索进行删除
 在数据表项目中，鼠标悬停**数据表名称**行，然后单击![img](https://main.qcloudimg.com/raw/b11192b7791016669333f5321cc6825e.png)图标，在下拉菜单中单击**删除表**，DLC 会自动生成删除数据表的 SQL 语句，执行 SQL 语句删除数据表。
 - 删除外表，删除数据表仅是删除 DLC 中存储的元数据信息，不会影响数据源文件。
 - 删除DataLakerCatalog目录下的数据表，将会清空所有该数据表数据，请谨慎操作。
