--- a/product/安全服务/数据安全网关/操作指南（SaaS 型）/资产管理/数据库管理/数据库管理/同步数据库.md
+++ b/product/安全服务/数据安全网关/操作指南（SaaS 型）/资产管理/数据库管理/数据库管理/同步数据库.md
@@ -10,7 +10,7 @@
 3. 在数据库资产页面，单击**同步**，弹出“同步主机”窗口。
 >?
 >- 同步地域范围：北京、成都、重庆、广州、南京、上海。
->- 同步资产类型：云数据库 MySQL、SQL Server。。
+>- 同步资产类型：云数据库 MySQL、SQL Server。
 >- 启用自动同步时，需先进行角色授权，请根据引导完成角色授权操作。
 >
 ![](https://qcloudimg.tencent-cloud.cn/raw/18a6c2bf01d52a71c2906a8da290ad83.png)
