--- a/product/存储与CDN/内容分发网络/配置手册/缓存配置/缓存键规则配置.md
+++ b/product/存储与CDN/内容分发网络/配置手册/缓存配置/缓存键规则配置.md
@@ -8,12 +8,15 @@
 
 ### 忽略参数
 
-若在您的业务场景下，资源 URL 路径中的参数对资源内容有影响，需要保留作为缓存键；反之，若参数对资源内容没有影响，则参数需不作为缓存键。例如：
+若在您的业务场景下，资源 URL 路径中问号后的参数对资源内容有影响，需要保留作为缓存键；反之，若参数对资源内容没有影响，则参数需不作为缓存键。
 
+#### 不忽略参数的场景：
 - 用户通过 URL 进行资源访问时，可能会携带一些具有特殊作用的参数，如使用以下链接来表示两张不同的图片：
 	`http://cloud.tencent.com/1.jpg?version=1`
 	`http://cloud.tencent.com/1.jpg?version=2`
 	这种场景下需要选择“不忽略”，保留URL所有参数及值作为缓存键，分别进行图片内容的缓存，来进行资源区分。
+	
+#### 保留指定参数的场景：
 - 若 URL 中除了对资源内有影响的 version 参数以外，还携带其他不影响图片内容的参数，如时间戳 time 来记录请求时间：
 	`http://cloud.tencent.com/1.jpg?version=1&time=1651752741`
 	`http://cloud.tencent.com/1.jpg?version=1&time=1651752742`
@@ -21,6 +24,8 @@
 	这种场景下需要选择"保留指定参数"，指定保留对图片内容有影响的 version 参数作为缓存键，而忽略不影响图片内容的 time 参数。
 	- 对于参数 version 值相同的请求，忽略参数 time 及值，将共用一份缓存；
 	- 对于参数 version 值不同的请求，忽略参数 time 及值，将区分缓存。
+	
+#### 参数全部忽略的场景：
 - 在音视频场景下，若使用时间戳签名参数来进行访问认证：
   `http://cloud.tencent.com/1.mp4?sign=XXXXXX`
   这种场景下需要选择“全部忽略”，由“?”之前的链接 `http://cloud.tencent.com/1.mp4` 作为缓存键。节点仅缓存一份资源，即使时间戳签名不断变化，通过签名校验后可直接命中缓存。
