--- a/product/计算与网络/轻量应用服务器/公告/关于提升中国内地地域实例套餐购买配额公告.md
+++ b/product/计算与网络/轻量应用服务器/公告/关于提升中国内地地域实例套餐购买配额公告.md
@@ -34,5 +34,6 @@
 
 
 ## 说明事项
+- 实例配额指账号的某个地域及某种套餐类型下，最多同时可拥有的实例数量（包含待回收实例）。当您退还并彻底销毁实例后，将不再占用购买配额。
 - 如需了解轻量应用服务器更多使用限制，请参见 [使用限制](https://cloud.tencent.com/document/product/1207/44376)。
 - 如需了解轻量应用服务器套餐定价信息，请参见 [计费概述](https://cloud.tencent.com/document/product/1207/44368)。
