--- a/product/数据库/腾讯云图/用户手册/组件指南/地图/腾讯地图专业版/气泡效果层.md
+++ b/product/数据库/腾讯云图/用户手册/组件指南/地图/腾讯地图专业版/气泡效果层.md
@@ -6,7 +6,7 @@
 | **填充颜色** | 气泡符号的颜色 |#5981FF |
 | **边线颜色** | 气泡符号边缘线的颜色 | RGBA(1,124,247,0.5) |
 | **边线宽度** | 气泡符号边缘线的宽度|2 |
-| **圆形半径** | 气泡符号的半径，用于控制散点尺寸 |20 |
+| **圆形半径** | 气泡符号的半径，用于控制尺寸 |20 |
 | **动画速度** | 气泡动画渐变的速率 | 0.5 |
 | **淡出效果** | 开启后，气泡动画结束消失时有淡出效果 |开启 |
 | **开启泛光** | 开启后，气泡有泛光效果 | 开启 |
