--- a/product/计算与网络/轻量应用服务器/产品动态/新功能发布记录.md
+++ b/product/计算与网络/轻量应用服务器/产品动态/新功能发布记录.md
@@ -1,3 +1,16 @@
+## 2022年05月
+<table>
+    <tbody><tr><th style="width: 25%;">动态名称</th><th style="width: 60%;">动态描述</th><th style="width: 15%;">相关文档</th></tr>
+		<tr>
+		<td>提升中国内地地域实例套餐购买配额</td>
+	  <td>轻量应用服务器云提升中国内地地域下实例套餐购买配额，提升后每地域下购买配额为：通用型（50台）、存储型（50台）及企业型（100台）。</td>
+	  <td>
+		<a href="https://cloud.tencent.com/document/product/1207/44376" target="_blank">使用限制</a>
+	  </td>
+	   </tr>
+	</tbody>
+</table>
+
 ## 2022年03月
 <table>
     <tbody><tr><th style="width: 25%;">动态名称</th><th style="width: 60%;">动态描述</th><th style="width: 15%;">相关文档</th></tr>
