--- a/product/计算与网络/云硬盘/操作指南/创建云硬盘.md
+++ b/product/计算与网络/云硬盘/操作指南/创建云硬盘.md
@@ -22,7 +22,7 @@
      </tr> 
 	 <tr>
          <td>云硬盘类型</td>
-         <td>必选参数。</br>云硬盘类型包括：<ul><li>高性能云硬盘</li><li>SSD 云硬盘</li><li>增强型 SSD 云硬盘</li><li>极速型 SSD 云硬盘，仅支持随存储增强型云服务器一同购买，不支持单独购买</li></ul></td>
+         <td>必选参数。</br>云硬盘类型包括：<ul><li>高性能云硬盘</li><li>通用型 SSD 云硬盘</li><li>SSD 云硬盘</li><li>增强型 SSD 云硬盘</li><li>极速型 SSD 云硬盘，仅支持随存储增强型云服务器一同购买，不支持单独购买</li></ul></td>
      </tr>
 		 <tr>
 			 <td>快速创盘</td>
@@ -32,7 +32,7 @@
 		 </tr>
 	 <tr>
          <td>容量</td>
-         <td>必选参数。</br>云硬盘的容量，规格大小如下：<ul><li>高性能云硬盘：10GB - 32000GB</li><li>SSD 云硬盘：20GB - 32000GB</li><li>增强型 SSD 云硬盘：20GB - 32000GB</li></ul>通过快照创建云硬盘时，容量大小不能低于快照大小。当您未指定云硬盘的容量时，容量默认和快照大小保持一致。</td>
+         <td>必选参数。</br>云硬盘的容量，规格大小如下：<ul><li>高性能云硬盘：10GB - 32000GB</li><li>通用型 SSD 云硬盘：20GB - 32000GB</li><li>SSD 云硬盘：20GB - 32000GB</li><li>增强型 SSD 云硬盘：20GB - 32000GB</li></ul>通过快照创建云硬盘时，容量大小不能低于快照大小。当您未指定云硬盘的容量时，容量默认和快照大小保持一致。</td>
      </tr>
 	 <tr>
 	 <tr>
