--- a/product/计算与网络/云硬盘/购买指导/价格总览.md
+++ b/product/计算与网络/云硬盘/购买指导/价格总览.md
@@ -7,17 +7,19 @@
 	<tbody>
    <tr>
 	   <th style="width: 32%;" rowspan="2">地域</th>
-		 <th colspan="4">云硬盘类型</th>     
+		 <th colspan="5">云硬盘类型</th>     
 		 </tr>
  <tr>        
   <th style="width: 10%;">高性能云硬盘</th>
-	<th style="width: 20%;">SSD 云硬盘</th>
-	<th style="width: 20%;">增强型 SSD 云硬盘</th>        
-	<th style="width: 20%;">极速型 SSD 云硬盘</th>      
+	<th style="width: 15%;">通用型 SSD 云硬盘</th>
+	<th style="width: 15%;">SSD 云硬盘</th>
+	<th style="width: 15%;">增强型 SSD 云硬盘</th>        
+	<th style="width: 15%;">极速型 SSD 云硬盘</th>      
 	</tr>
       <tr>
             <td>华南地区（广州）</td>
             <td>0.35</td>
+						<td>0.5</td>
 						<td>1.0</td>
             <td>1.0</td>
             <td>1.0</td>
@@ -25,6 +27,7 @@
        <tr>
             <td>华东地区（上海）</td>
            <td>0.35</td>
+					 <td>0.5</td>
 						<td>1.0</td>
             <td>1.0</td>
             <td>1.0</td>
@@ -32,6 +35,7 @@
 			<tr>
             <td>华东地区（南京）</td>
             <td>0.35</td>
+						<td>0.5</td>
 						<td>1.0</td>
             <td>1.0</td>
             <td>1.0</td>
@@ -39,114 +43,133 @@
 			<tr>
             <td>华北地区（北京）</td>
             <td>0.35</td>
+						<td>0.5</td>
 						<td>1.0</td>
             <td>1.0</td><td>1.0</td>
       </tr>
 			<tr>
             <td>西南地区（成都）</td>
             <td>0.35</td>
+						<td>0.5</td>
 						<td>1.0</td>
             <td>1.0</td><td>-</td>
       </tr>
 					<tr>
             <td>西南地区（重庆）</td>
             <td>0.35</td>
+						<td>0.5</td>
 						<td>1.0</td>
             <td>1.0</td><td>-</td>
       </tr>
 			<tr>
             <td>华东地区（上海金融专区）</td>
             <td>0.56</td>
+						<td>0.5</td>
 						<td>1.76</td>
             <td>-</td> <td>-</td>
       </tr>
 			<tr>
             <td>华南地区（深圳金融专区）</td>
             <td>0.56</td>
+						<td>0.5</td>
 						<td>1.76</td>
             <td>-</td><td>-</td>
       </tr>
 					<tr>
             <td>华北地区（北京金融专区）</td>
             <td>0.56</td>
+						<td>0.5</td>
 						<td>1.76</td>
             <td>-</td><td>-</td>
       </tr>
 			<tr>
             <td>港澳台地区（中国香港）</td>
             <td>0.35</td>
+						<td>0.75</td>
 						<td>1.1</td>
             <td>1.5</td><td>-</td>
       </tr>
 			<tr>
             <td>北美地区（多伦多）</td>
             <td>0.35</td>
+						<td>0.75</td>
 						<td>1.1</td>
             <td>-</td><td>-</td>
       </tr>
 			<tr>
             <td>亚太东南地区（新加坡）</td>
             <td>0.35</td>
+						<td>0.75</td>
             <td>1.25</td>
 						<td>1.5</td><td>-</td>
       </tr>
 				<tr>
             <td>亚太东南地区（雅加达）</td>
             <td>0.35</td>
+						<td>0.75</td>
             <td>1.25</td>
 						<td>1.5</td><td>-</td>
       </tr>
 			<tr>
             <td>美国西部（硅谷）</td>
             <td>0.35</td>
+						<td>0.75</td>
             <td>1.15</td>
 						<td>1.5</td><td>-</td>
       </tr>
 			<tr>
             <td>欧洲地区（法兰克福）</td>
             <td>0.35</td>
+						<td>0.75</td>
             <td>1.25</td>
 						<td>1.5</td><td>-</td>
       </tr>
 			<tr>
             <td>亚太东北地区（首尔）</td>
             <td>0.35</td>
+						<td>0.75</td>
             <td>1.3</td>
 						<td>1.5</td><td>-</td>
       </tr>
 			<tr>
             <td>亚太地区（孟买）</td>
             <td>0.35</td>
+						<td>0.75</td>
             <td>1.2</td>
 						<td>1.5</td><td>-</td>
       </tr>
 			<tr>
             <td>美国东部（弗吉尼亚）</td>
             <td>0.35</td>
+						<td>0.75</td>
             <td>1.25</td>
 						<td>1.5</td><td>-</td>
       </tr>
 			<tr>
             <td>亚太东南地区（曼谷）</td>
             <td>0.35</td>
+						<td>0.75</td>
             <td>1.25</td>
 						<td>1.5</td><td>-</td>
     </tr>
 		<tr>
             <td>欧洲东部（莫斯科）</td>
             <td>0.35</td>
+						<td>0.75</td>
             <td>1.3</td>
 						<td>1.5</td><td>-</td>
         </tr>
         <tr>
             <td>亚太东北地区（东京）</td>
             <td>0.35</td>
+						<td>0.75</td>
             <td>1.5</td>
 						<td>1.5</td><td>-</td>
         </tr>
 				  <tr>
             <td>南美地区（圣保罗）</td>
             <td>0.35</td>
+						<td>0.75</td>
             <td>1.25</td>
 						<td>1.5</td><td>-</td>
         </tr>
@@ -159,17 +182,19 @@
 	<tbody>
    <tr>            
 	   <th style="width: 32%;" rowspan="2">地域</th>
-		 <th colspan="4">云硬盘类型</th>     
+		 <th colspan="5">云硬盘类型</th>     
 		 </tr>
  <tr>        
   <th style="width: 10%;">高性能云硬盘</th>
-	<th style="width: 20%;">SSD 云硬盘</th>
-	<th style="width: 20%;">增强型 SSD 云硬盘</th>        
-	<th style="width: 20%;">极速型 SSD 云硬盘</th>      
+	<th style="width: 15%;">通用型 SSD 云硬盘</th>
+	<th style="width: 15%;">SSD 云硬盘</th>
+	<th style="width: 15%;">增强型 SSD 云硬盘</th>        
+	<th style="width: 15%;">极速型 SSD 云硬盘</th>      
 	</tr>
       <tr>
             <td>华南地区（广州）</td>
 						<td>0.0009</td>
+						<td>0.001</td>
 						<td>0.0025</td>
             <td>0.0021</td>
             <td>0.0021</td>
@@ -177,6 +202,7 @@
        <tr>
             <td>华东地区（上海）</td>
 						<td>0.0009</td>
+						<td>0.001</td>
 						<td>0.0025</td>
             <td>0.0021</td>
             <td>0.0021</td>
@@ -184,120 +210,140 @@
 			<tr>
             <td>华东地区（南京）</td>
 						<td>0.0005</td>
+						<td>0.001</td>
 						<td>0.0014</td>
             <td>0.0021</td><td>0.0021</td>
       </tr>
 			<tr>
             <td>华北地区（北京）</td>
 						<td>0.0009</td>
+						<td>0.001</td>
 						<td>0.0025</td>
             <td>0.0021</td><td>0.0021</td>
       </tr>
 			<tr>
             <td>西南地区（成都）</td>
 						<td>0.0009</td>
+						<td>0.001</td>
 						<td>0.0025</td>
             <td>0.0021</td><td>-</td>
       </tr>
 					<tr>
             <td>西南地区（重庆）</td>
 						<td>0.0009</td>
+						<td>0.001</td>
 						<td>0.0025</td>
             <td>0.0021</td><td>-</td>
       </tr>
 			<tr>
             <td>华东地区（上海金融专区）</td>
 						<td>0.00144</td>
+						<td>0.001</td>
 						<td>0.0053</td>
             <td>-</td><td>-</td>
       </tr>
 			<tr>
             <td>华南地区（深圳金融专区）</td>
 						<td>0.00144</td>
+						<td>0.001</td>
 						<td>0.0053</td>
             <td>-</td><td>-</td>
       </tr>
 					<tr>
             <td>华北地区（北京金融专区）</td>
 						<td>0.00144</td>
+						<td>0.001</td>
 						<td>0.0053</td>
             <td>-</td><td>-</td>
       </tr>
 			<tr>
             <td>港澳台地区（中国香港）</td>
             <td>0.0005</td>
+						<td>0.0015</td>
 						<td>0.0025</td>
             <td>0.0021</td><td>-</td>
       </tr>
 			<tr>
             <td>北美地区（多伦多）</td>
             <td>0.0005</td>
+						<td>0.0015</td>
 						<td>0.0025</td>
             <td>-</td><td>-</td>
       </tr>
 			<tr>
             <td>亚太东南地区（新加坡）</td>
             <td>0.0005</td>
+						<td>0.0015</td>
             <td>0.0027</td>
 						<td>0.0033</td><td>-</td>
       </tr>
 			<tr>
             <td>亚太东南地区（雅加达）</td>
             <td>0.0005</td>
+						<td>0.0015</td>
             <td>0.0024</td>
 						<td>0.0033</td><td>-</td>
       </tr>
 			<tr>
             <td>美国西部（硅谷）</td>
             <td>0.0005</td>
+						<td>0.0015</td>
             <td>0.0025</td>
 						<td>0.0033</td><td>-</td>
       </tr>
 			<tr>
             <td>欧洲地区（法兰克福）</td>
             <td>0.0005</td>
+						<td>0.0015</td>
             <td>0.0025</td>
 						<td>0.0033</td><td>-</td>
       </tr>
 			<tr>
             <td>亚太东北地区（首尔）</td>
             <td>0.0005</td>
+						<td>0.0015</td>
             <td>0.0025</td>
 						<td>0.0033</td><td>-</td>
       </tr>
 			<tr>
             <td>亚太地区（孟买）</td>
             <td>0.0005</td>
+						<td>0.0015</td>
             <td>0.0025</td>
 						<td>0.0033</td><td>-</td>
       </tr>
 			<tr>
             <td>美国东部（弗吉尼亚）</td>
             <td>0.0007</td>
+						<td>0.0015</td>
             <td>0.0023</td>
 						<td>0.0033</td><td>-</td>
       </tr>
 			<tr>
             <td>亚太东南地区（曼谷）</td>
             <td>0.0007</td>
+						<td>0.0015</td>
             <td>0.0024</td>
 						<td>0.0033</td><td>-</td>
     </tr>
 		<tr>
             <td>欧洲东部（莫斯科）</td>
             <td>0.0006</td>
+						<td>0.0015</td>
             <td>0.0024</td>
 						<td>0.0033</td><td>-</td>
         </tr>
         <tr>
             <td>亚太东北地区（东京）</td>
             <td>0.0006</td>
+						<td>0.0015</td>
             <td>0.0024</td>
 						<td>0.0033</td><td>-</td>
         </tr>
 				<tr>
             <td>南美地区（圣保罗）</td>
             <td>0.0006</td>
+						<td>0.0015</td>
             <td>0.0024</td>
 						<td>0.0033</td><td>-</td>
         </tr>
