--- a/product/计算与网络/云硬盘/购买指导/价格总览.md
+++ b/product/计算与网络/云硬盘/购买指导/价格总览.md
@@ -350,8 +350,12 @@
     </tbody></table>
 
 
->?`-` 表示该类型云硬盘暂未上线至对应地域。
->
+
+<dx-alert infotype="explain" title="">
+`-` 表示该类型云硬盘暂未上线至对应地域。
+</dx-alert>
+
+
 
 ## 云硬盘额外性能价格总览[](id:performance)
 
