--- a/product/计算与网络/云服务器/操作指南/实例/查看信息/查看实例元数据.md
+++ b/product/计算与网络/云服务器/操作指南/实例/查看信息/查看实例元数据.md
@@ -135,32 +135,32 @@
 <td>2017-09-19 更新</td>
 </tr>
 <tr>
-<td>/meta-data/instance/instance-type</td>
+<td>instance/instance-type</td>
 <td>实例规格</td>
 <td>2017-09-19 更新</td>
 </tr>
 <tr>
-<td>/instance/image-id</td>
+<td>instance/image-id</td>
 <td>实例镜像 ID</td>
 <td>2017-09-19 更新</td>
 </tr>
 <tr>
-<td>/instance/security-group</td>
+<td>instance/security-group</td>
 <td>实例绑定安全组信息</td>
 <td>2017-09-19 更新</td>
 </tr>
 <tr>
-<td>/instance/bandwidth-limit-egress</td>
+<td>instance/bandwidth-limit-egress</td>
 <td>实例内网出方向带宽限制，单位Kbit/s</td>
 <td>2019-09-29 更新</td>
 </tr>
 <tr>
-<td>/instance/bandwidth-limit-ingress</td>
+<td>instance/bandwidth-limit-ingress</td>
 <td>实例内网入方向带宽限制，单位Kbit/s</td>
 <td>2019-09-29 更新</td>
 </tr>
 <tr>
-<td>/cam/security-credentials/${role-name}</td>
+<td>cam/security-credentials/${role-name}</td>
 <td>实例 CAM 角色策略所生成的临时凭证。只有在实例绑定了 CAM 角色后，您才能获取临时凭证。其中 ${role-name} 参数需要替换为实例 CAM 角色的名称。如果未指定，将返回404。</td>
 <td>2019-12-11 更新</td>
 </tr>
