--- a/product/计算与网络/云服务器/操作指南/实例/查看信息/查看实例元数据.md
+++ b/product/计算与网络/云服务器/操作指南/实例/查看信息/查看实例元数据.md
@@ -1,6 +1,11 @@
 实例元数据即表示实例的相关数据，可以用来配置或管理正在运行的实例。
->? 虽然只能从实例自身内部访问实例元数据，但数据并未被加密保护。可访问实例的人员均可查看其元数据。因此，您应当采取适当的预防措施来保护敏感数据。
->
+
+
+<dx-alert infotype="explain" title="">
+ 虽然只能从实例自身内部访问实例元数据，但数据并未被加密保护。可访问实例的人员均可查看其元数据。因此，您应当采取适当的预防措施来保护敏感数据。
+</dx-alert>
+
+
 
 
 ## 实例元数据分类
@@ -166,10 +171,15 @@
 </tr>
 </tbody></table>
 
->? 
->- 以上表格中 `${mac}` 和 `${local-ipv4}`  字段分别表示实例指定网络接口的设备地址和内网 IP 地址。
->- 请求的目标URL地址，大小写敏感。请严格按照请求的返回结果来构造新请求的目标 URL 地址。
->- 当前版本对 placement 返回数据发生了变更，若您需要使用以前版本的数据，则您可以指定以前版本路径或是不指定版本路径从而访问版本1.0的数据，对于placement返回数据请参考 [地域和可用区](https://cloud.tencent.com/document/product/213/6091)。
+
+
+<dx-alert infotype="explain" title="">
+- 以上表格中 `${mac}` 和 `${local-ipv4}`  字段分别表示实例指定网络接口的设备地址和内网 IP 地址。
+- 请求的目标URL地址，大小写敏感。请严格按照请求的返回结果来构造新请求的目标 URL 地址。
+- 当前版本对 placement 返回数据发生了变更，若您需要使用以前版本的数据，则您可以指定以前版本路径或是不指定版本路径从而访问版本1.0的数据，对于placement返回数据请参考 [地域和可用区](https://cloud.tencent.com/document/product/213/6091)。
+</dx-alert>
+
+
 
 ## 查询实例元数据
 在实例内部可以通过实例元数据访问实例本地 IP、公网 IP 等数据以管理与外部应用程序的连接。
@@ -189,8 +199,12 @@ curl http://metadata.tencentyun.com/latest/meta-data/
 ### 查询元数据示例
 
 以下示例说明如何获取 metadata 版本信息。
->! 当腾讯云修改 metadata 访问路径或返回数据时，会发布新的 metadata 版本，如果您的应用程序或脚本依赖于以前版本的结构或返回数据，则您可以使用指定早期版本访问 metadata。不指定版本则默认访问1.0版本。
->
+
+<dx-alert infotype="notice" title="">
+当腾讯云修改 metadata 访问路径或返回数据时，会发布新的 metadata 版本，如果您的应用程序或脚本依赖于以前版本的结构或返回数据，则您可以使用指定早期版本访问 metadata。不指定版本则默认访问1.0版本。
+</dx-alert>
+
+
 
 ```shell
 [qcloud-user]# curl http://metadata.tencentyun.com/
