--- a/product/计算与网络/云硬盘/动态与公告/新功能发布记录.md
+++ b/product/计算与网络/云硬盘/动态与公告/新功能发布记录.md
@@ -1,3 +1,14 @@
+## 2022年05月
+<table>
+	<tr><th style="width: 25%;">动态名称</th><th style="width: 50%;">动态描述</th><th style="width: 25%;">相关文档</th></tr>
+		<tr>
+	<td>新增通用型 SSD 云硬盘</td>	<td>通用型 SSD 云硬盘是腾讯云推出的入门级全闪类型块存储产品，具有高性价比的优势，适用于高数据可靠性要求、中等性能要求的 Web/App 服务器、业务逻辑处理、KV 服务、基础数据库服务等中型应用场景。</td>
+		<td>
+	<a href="https://cloud.tencent.com/document/product/362/2353">云硬盘类型</a>
+	</td>
+	</tr>
+</table>
+
 ## 2022年03月
 <table>
 	<tr><th style="width: 25%;">动态名称</th><th style="width: 50%;">动态描述</th><th style="width: 25%;">相关文档</th></tr>
