--- a/product/计算与网络/云服务器/操作指南/实例/查看信息/查看实例元数据.md
+++ b/product/计算与网络/云服务器/操作指南/实例/查看信息/查看实例元数据.md
@@ -185,12 +185,12 @@
 在实例内部可以通过实例元数据访问实例本地 IP、公网 IP 等数据以管理与外部应用程序的连接。
 要从运行实例内部查看所有类别的实例元数据，请使用以下 URI：
 
-```
+```shell
 http://metadata.tencentyun.com/latest/meta-data/
 ```
 您可以通过 cURL 工具或是 HTTP 的 GET 请求来访问 metadata，例如：
 
-```
+```shell
 curl http://metadata.tencentyun.com/latest/meta-data/
 ```
 * 对于不存在的资源，会返回 HTTP 错误代码404 - Not Found。
