--- a/product/计算与网络/轻量应用服务器/产品动态/新功能发布记录.md
+++ b/product/计算与网络/轻量应用服务器/产品动态/新功能发布记录.md
@@ -5,7 +5,10 @@
 		<td>提升中国内地地域实例套餐购买配额</td>
 	  <td>轻量应用服务器云提升中国内地地域下实例套餐购买配额，提升后每地域下购买配额为：通用型（50台）、存储型（50台）及企业型（100台）。</td>
 	  <td>
-		<a href="https://cloud.tencent.com/document/product/1207/44376" target="_blank">使用限制</a>
+		<ul style="margin-bottom:0px">
+		<li><a href="https://cloud.tencent.com/document/product/1207/73441" target="_blank">关于提升中国内地地域实例套餐购买配额公告</a></li>
+		<li><a href="https://cloud.tencent.com/document/product/1207/44376" target="_blank">使用限制</a></li>
+		</ul>
 	  </td>
 	   </tr>
 	</tbody>
